--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -551,7 +551,7 @@
 
 **欲成内闭多昏昧，再入牛黄即奏功。**
 
-暑热之邪、上蒙淸窍则耳聋，不与少阳同例，忌用柴胡。暑邪乘于包络则神昏，宜清心开闭，如《温病条辨》之淸营汤，安宫牛黄丸之类。
+暑热之邪、上蒙清窍则耳聋，不与少阳同例，忌用柴胡。暑邪乘于包络则神昏，宜清心开闭，如《温病条辨》之清营汤，安宫牛黄丸之类。
 
 **33.暑湿合邪空窍触，三焦受病势弥漫；**
 
@@ -571,7 +571,7 @@
 
 **若得疹莎肌内透，再清痰火养阴安。**
 
-凡暑湿合邪，轻则气分微结，重则三焦俱病，清解不应，即属湿温重证，肺气不得宣畅则酿成脓血，咯血是热伤肺络，不可用滋腻药，耳聋是湿蒙淸窍，不可作少阳治，治当急清三焦，气分一松，则疹痧得以外达，再议淸火淸痰，渐入养阴之品。
+凡暑湿合邪，轻则气分微结，重则三焦俱病，清解不应，即属湿温重证，肺气不得宣畅则酿成脓血，咯血是热伤肺络，不可用滋腻药，耳聋是湿蒙清窍，不可作少阳治，治当急清三焦，气分一松，则疹痧得以外达，再议清火清痰，渐入养阴之品。
 
 此条阐明湿温重证的治法，惟恐人见咯血而误作阴虚治，见耳聋误作少阳治。
 
@@ -587,7 +587,7 @@
 
 **清邪解毒银犀妙，菖郁金黄温暑通。**
 
-舌绛鲜红，疫邪自卫入营，逆传包络及营分，汗下两禁，当从三焦立法，惟宜淸营解毒，逐秽开闭，如犀角、银花、菖蒲、郁金、西黄、金汁之类，与温暑治法相通。较上条自表入里大不相同。
+舌绛鲜红，疫邪自卫入营，逆传包络及营分，汗下两禁，当从三焦立法，惟宜清营解毒，逐秽开闭，如犀角、银花、菖蒲、郁金、西黄、金汁之类，与温暑治法相通。较上条自表入里大不相同。
 
 上条由膜原入胃，自表传里，故可从足经用药；此条疫邪由卫入营，从手经用药，与温暑大致相同。
 
@@ -611,5 +611,5 @@
 
 不拘伤寒杂症，正气虚者，其舌苔必娇嫩而薄，或淡红或微白，皆可投补。若见黄而厚，白而腻，总属内邪未清，不可遽进补药。
 
-此条凭舌苔以验其虛实，是分别宜补宜淸的总诀。若唇淡舌白，润滑而有齿印，足徵脏腑阴寒，则又宜温中回阳之法。
+此条凭舌苔以验其虛实，是分别宜补宜清的总诀。若唇淡舌白，润滑而有齿印，足徵脏腑阴寒，则又宜温中回阳之法。
 
