--- a/ok/qs/qs01_02.md
+++ b/ok/qs/qs01_02.md
@@ -20,7 +20,7 @@
 
 **腭** è，读厄。分膈口腔和鼻腔的组织，前部叫硬腭，后部叫软腭，通称上膛。**铿锵** Keng qiang，读坑枪，响亮而有节奏。**撮**cuo，读磋，韵母是ü或以ü起头的叫撮口呼。**抑扬**（声音）高低起伏。**咏越** 咏，依着一定的腔调缓慢地诵读。越，（声音、情感）昂扬。
 
-宫、商、羽、徵、角音均为正音，也就是五脏无病时的正常声音。宫音，是舌头位在口腔正中，从喉发音。其声音极长、极低下、极重浊，且深沉、浑厚、雄壮而洪亮。商音，是开口张腭，从口腔发音，其声音次于宫音的长、低、浊，有节奏而淸脆响亮。羽音，是撮起口唇发音，其音极短促，调髙而清脆，柔和细腻而尖锐。徵音，是舌尖抵着牙齿发音，其音次于羽音的短促、高淸，有着抑扬清越的余韵。角音，是舌头向里收缩发音，它的声音长、短、高、下、清、浊都比较和调，有条达、畅爽、适中的余韵。
+宫、商、羽、徵、角音均为正音，也就是五脏无病时的正常声音。宫音，是舌头位在口腔正中，从喉发音。其声音极长、极低下、极重浊，且深沉、浑厚、雄壮而洪亮。商音，是开口张腭，从口腔发音，其声音次于宫音的长、低、浊，有节奏而清脆响亮。羽音，是撮起口唇发音，其音极短促，调髙而清脆，柔和细腻而尖锐。徵音，是舌尖抵着牙齿发音，其音次于羽音的短促、高清，有着抑扬清越的余韵。角音，是舌头向里收缩发音，它的声音长、短、高、下、清、浊都比较和调，有条达、畅爽、适中的余韵。
 
 **4.喜心所感，欣散之声。怒心所感，忿厉之声。**
 
