--- a/ok/qs/qs02.md
+++ b/ok/qs/qs02.md
@@ -42,7 +42,7 @@
 
 **生地微寒，能消温热，骨蒸烦劳，养阴凉血。**
 
-生地味甘、苦，性微寒，功能养阴生津、淸热凉血。常用于温热病烦热口渴、舌红少津的津液耗伤证，以及阴虚骨蒸烦热的肺痨病。此外，对血热妄行所致的各种出血证，也能收到凉血止血之效。
+生地味甘、苦，性微寒，功能养阴生津、清热凉血。常用于温热病烦热口渴、舌红少津的津液耗伤证，以及阴虚骨蒸烦热的肺痨病。此外，对血热妄行所致的各种出血证，也能收到凉血止血之效。
 
 **熟地微温，滋肾补血，益髓填精，乌须黑发。**
 
@@ -50,17 +50,17 @@
 
 **麦门甘寒，解渴袪烦，补心清肺，虚热自安。**
 
-麦门冬味甘，性寒，功能养阴淸热。故能解除因热病伤阴引起的口渴和心胸烦热。还能补心阴、淸心火，淸肺热、润肺燥，常用于心火上炎的咽喉不利，肺热伤阴的咳嗽咯血等证，使阴虚发热的病证得到安康。
+麦门冬味甘，性寒，功能养阴清热。故能解除因热病伤阴引起的口渴和心胸烦热。还能补心阴、清心火，清肺热、润肺燥，常用于心火上炎的咽喉不利，肺热伤阴的咳嗽咯血等证，使阴虚发热的病证得到安康。
 
 **天门甘寒，肺痿肺痈，消痰止嗽，喘热有功。**
 
-天门冬味甘，性寒，功能养阴淸热、润肺化痰，故可用于肺热喘咳，亦可用于咳嗽吐浊沫的“肺痿”病和咳嗽胸痛、吐脓血的“肺痈”病。
+天门冬味甘，性寒，功能养阴清热、润肺化痰，故可用于肺热喘咳，亦可用于咳嗽吐浊沫的“肺痿”病和咳嗽胸痛、吐脓血的“肺痈”病。
 
 **黄连味苦，泻心除痞，清热明眸，厚肠止痢。**
 
 **眸**mau，读谋，瞳孔。 **厚肠** 增强肠胃功能。
 
-黄连味苦，性寒，功能淸热燥湿，泻火解毒。用于心火炽盛的心烦不眠和热病躁烦、神昏谵语，肝火旺盛的目赤肿痛，肠胃湿热引起的腹泻、痢疾等证。此外，本品还常用于痈肿疮毒疔疖等外科病证。
+黄连味苦，性寒，功能清热燥湿，泻火解毒。用于心火炽盛的心烦不眠和热病躁烦、神昏谵语，肝火旺盛的目赤肿痛，肠胃湿热引起的腹泻、痢疾等证。此外，本品还常用于痈肿疮毒疔疖等外科病证。
 
 **黄芩苦寒，枯泻肺火，子清大肠，湿热皆可。**
 
@@ -68,7 +68,7 @@
 
 **子** 子芩，黄芩新根中部坚实的称“子芩”，也称“条芩”。
 
-黄芩味苦，性寒，功能淸热燥湿。枯芩适于淸肺火，治肺热咳嗽；子芩适于淸大肠火，治大肠有热的痢疾泄泻。此外，凡湿热所致的黄疸和痈肿疮毒，孕妇有热的胎动不安，也可应用。
+黄芩味苦，性寒，功能清热燥湿。枯芩适于清肺火，治肺热咳嗽；子芩适于清大肠火，治大肠有热的痢疾泄泻。此外，凡湿热所致的黄疸和痈肿疮毒，孕妇有热的胎动不安，也可应用。
 
 **黄柏苦寒，降火滋阴，骨蒸湿热，下血堪任。**
 
@@ -76,11 +76,11 @@
 
 **栀子性寒，解郁除烦，吐衄胃痛，火降小便。**
 
-栀子味苦，性寒，功能淸热泻火。故能解除有郁热的心烦不安，并能凉血止血，治血热妄行所致的吐血、鼻血和牙龈出血等出血证。还可治胃部热痛，能导热从小便排出。
+栀子味苦，性寒，功能清热泻火。故能解除有郁热的心烦不安，并能凉血止血，治血热妄行所致的吐血、鼻血和牙龈出血等出血证。还可治胃部热痛，能导热从小便排出。
 
 **连翘苦寒，能消痈毒，气聚血凝，温热堪逐。**
 
-连翘味苦，性微寒，功能清热解毒、消痈散结。可治热毒引起的气血凝滞而产生的痈肿疮毒。本品淸中有透，是温热病证的良药；且有淸心火除烦热之效。
+连翘味苦，性微寒，功能清热解毒、消痈散结。可治热毒引起的气血凝滞而产生的痈肿疮毒。本品清中有透，是温热病证的良药；且有清心火除烦热之效。
 
 **石膏大寒，能泻胃火，发渴头疼，解肌立妥。**
 
@@ -98,7 +98,7 @@
 
 **蠲**juan，读捐，除去。
 
-大黄味苦，性寒，属于寒性泻下药，功能疏导肠胃、通便去结、除痰逐水。可治疗肠胃实热积聚引起的热结便秘和痰水停留引起的水肿喘满。此外，本品还有淸热解毒、祛淤通经等功效。
+大黄味苦，性寒，属于寒性泻下药，功能疏导肠胃、通便去结、除痰逐水。可治疗肠胃实热积聚引起的热结便秘和痰水停留引起的水肿喘满。此外，本品还有清热解毒、祛淤通经等功效。
 
 **柴胡味苦，能泻肝火，寒热往来，疟疾均可。**
 
@@ -130,7 +130,7 @@
 
 **薄荷味辛，最清头目，袪风散热，骨蒸宜服。**
 
-薄荷味辛，性凉，功能淸利头目、驱散风热。治头痛、目赤、牙痛、咽喉肿痛等上部风热证，并常用于风热感冒、皮肤风疹、或温病初起发热无汗等表证。配合养阴清热药，还可用于骨蒸劳热。
+薄荷味辛，性凉，功能清利头目、驱散风热。治头痛、目赤、牙痛、咽喉肿痛等上部风热证，并常用于风热感冒、皮肤风疹、或温病初起发热无汗等表证。配合养阴清热药，还可用于骨蒸劳热。
 
 **防风甘温，能除头晕，骨节痹疼，诸风口噤。**
 
@@ -140,13 +140,13 @@
 
 **荆芥味辛，能清头目，表汗祛风，治疮消淤。**
 
-荆芥味辛，性微温，功能发汗解表，散风邪，淸头目。治疗外感风寒，头痛、鼻塞、发热恶寒、无汗等症，常与防风、羌活配伍；治疗外感风热，头痛、目赤、咽喉肿痛等症，常与连翘、薄荷、桔梗等配伍。本品还有消淤解毒的怍用，可用于皮肤疮疡。炒炭有止血功效，常用于衄血、便血、崩漏等证。
+荆芥味辛，性微温，功能发汗解表，散风邪，清头目。治疗外感风寒，头痛、鼻塞、发热恶寒、无汗等症，常与防风、羌活配伍；治疗外感风热，头痛、目赤、咽喉肿痛等症，常与连翘、薄荷、桔梗等配伍。本品还有消淤解毒的怍用，可用于皮肤疮疡。炒炭有止血功效，常用于衄血、便血、崩漏等证。
 
 **细辛辛温，少阴头痛，利窍通关，风湿皆用。**
 
 **少阴头痛** 少阴，是十四经络之一的少阴经。此指少阴经受风寒引起的头痛。
 
-细辛味辛，性温，功能散少阴风寒，并能止痛。常用于治疗少阴经的风寒头痛。本品能宣通鼻窍，外用研末吹鼻，可以催嚏通关，治疗因关窍闭塞的神志昏迷不醒。本品还常用于风寒湿引起的关节疼痛。此外，还用于寒饮伏肺，咳嗽气喘，痰多淸稀等症。
+细辛味辛，性温，功能散少阴风寒，并能止痛。常用于治疗少阴经的风寒头痛。本品能宣通鼻窍，外用研末吹鼻，可以催嚏通关，治疗因关窍闭塞的神志昏迷不醒。本品还常用于风寒湿引起的关节疼痛。此外，还用于寒饮伏肺，咳嗽气喘，痰多清稀等症。
 
 **羌活微温，祛风除湿，身痛头疼，舒筋活络。**
 
@@ -282,7 +282,7 @@
 
 **牡丹苦寒，破血通经，血分有热，无汗骨蒸。**
 
-牡丹皮味苦辛，性微寒，功能散淤血、通经脉。用于淤血停滞的月经不通或痈肿疮毒；并能淸热凉血，对血分有热引起的吐血、鼻血、皮下斑疹等症均可治疗。又能退虚热，用于阴虚发热及夜热早凉、无汗的虚劳骨节烦热。
+牡丹皮味苦辛，性微寒，功能散淤血、通经脉。用于淤血停滞的月经不通或痈肿疮毒；并能清热凉血，对血分有热引起的吐血、鼻血、皮下斑疹等症均可治疗。又能退虚热，用于阴虚发热及夜热早凉、无汗的虚劳骨节烦热。
 
 **玄参苦寒，清无根火，消肿骨蒸，补肾亦可。**
 
@@ -314,7 +314,7 @@
 
 **防己气寒，风湿脚痛，热积膀胱，消痈散肿。**
 
-防己味苦辛，性寒，功能祛风湿、止痛、淸利湿热。治疗风湿性关节疼痛、脚气浮肿，以及膀胱积热的小便不利、水肿等，并能消散痈肿。
+防己味苦辛，性寒，功能祛风湿、止痛、清利湿热。治疗风湿性关节疼痛、脚气浮肿，以及膀胱积热的小便不利、水肿等，并能消散痈肿。
 
 **地榆沉寒，血热堪用，血痢带崩，金疮止痛。**
 
@@ -412,7 +412,7 @@
 
 **薏苡味甘，专除湿痹，筋节拘挛，肺痈肺痿。**
 
-薏苡仁味甘淡，性微寒，功能健脾利水除湿、淸热排脓。治疗风寒湿痹以湿胜为主者和筋脉挛急、水肿、泄泻、尿少等症，并治咳嗽胸痛吐脓血的“肺痈”和咳吐稠痰涎沫的“肺瘘”。
+薏苡仁味甘淡，性微寒，功能健脾利水除湿、清热排脓。治疗风寒湿痹以湿胜为主者和筋脉挛急、水肿、泄泻、尿少等症，并治咳嗽胸痛吐脓血的“肺痈”和咳吐稠痰涎沫的“肺瘘”。
 
 **肉蔻辛温，脾胃虚冷，泻痢不休，功可立等。**
 
@@ -430,7 +430,7 @@
 
 **常山苦寒，截疟除痰，解伤寒热，水胀能宽。**
 
-常山味辛苦，性微寒，有小毒，功能裁疟、淸热、涌吐痰涎。用治疟疾有良效，并可以解除伤寒邪在少阳的往来寒热、痰水停留的胸中胀满。
+常山味辛苦，性微寒，有小毒，功能裁疟、清热、涌吐痰涎。用治疟疾有良效，并可以解除伤寒邪在少阳的往来寒热、痰水停留的胸中胀满。
 
 **良姜性热，下气温中，转筋霍乱，酒食能攻。**
 
@@ -534,11 +534,11 @@
 
 **无对** 没有其他药物可以与它相比。
 
-金银花味甘，性寒，功能淸热解毒。用于外感风热之证；对痈肿疮疖有很好疗效。痈肿疮毒初起，未成脓的可以消散；已成脓的可以托毒排脓，促使早日穿溃。
+金银花味甘，性寒，功能清热解毒。用于外感风热之证；对痈肿疮疖有很好疗效。痈肿疮毒初起，未成脓的可以消散；已成脓的可以托毒排脓，促使早日穿溃。
 
 **漏芦性寒，袪恶疮毒，补血排脓，生肌长肉。**
 
-漏芦味苦，性寒，功能淸热解毒、消肿排脓。用于热毒较重的痈疽疮毒，未成脓时可以消肿，已成脓时可以排脓生肌。
+漏芦味苦，性寒，功能清热解毒、消肿排脓。用于热毒较重的痈疽疮毒，未成脓时可以消肿，已成脓时可以排脓生肌。
 
 **蒺藜味苦，疗疮搔痒，白癜头疮，翳除目朗。**
 
@@ -584,7 +584,7 @@
 
 **木鳖甘寒，能追疮毒，乳痈腰疼，消肿最速。**
 
-木鳖子味甘，性寒，有毒，功能淸血热、消疮毒。用治乳房肿痛的“乳痈”和跌打损伤的腰痛，消肿止痛的效果最快；还用于恶疮肿毒和瘰疬等症。
+木鳖子味甘，性寒，有毒，功能清血热、消疮毒。用治乳房肿痛的“乳痈”和跌打损伤的腰痛，消肿止痛的效果最快；还用于恶疮肿毒和瘰疬等症。
 
 **蜂房咸苦，惊痫瘈疭，牙疼肿毒，瘰疬乳痈。**
 
@@ -614,7 +614,7 @@
 
 **疸**dan，读胆，黄疸。
 
-茵陈蒿味苦，性微寒，功能淸热除湿，利胆退黄。是治疗湿热黄疸证的主药，若与温里药配伍，亦可治寒湿引起的肤色晦暗，肢体逆冷的阴黄。
+茵陈蒿味苦，性微寒，功能清热除湿，利胆退黄。是治疗湿热黄疸证的主药，若与温里药配伍，亦可治寒湿引起的肤色晦暗，肢体逆冷的阴黄。
 
 **红花辛温，最消淤热，多则通经，少则养血。**
 
@@ -680,7 +680,7 @@
 
 **瓜蒌仁寒，宁嗽化痰，伤寒结胸，解渴止烦。**
 
-瓜蒌仁味甘，性寒，功能淸热化痰、润肺宽胸、润肠通便。
+瓜蒌仁味甘，性寒，功能清热化痰、润肺宽胸、润肠通便。
 
 可治痰热咳嗽和伤寒痰热结胸，按之作痛；并可解除热病的烦渴及津枯肠燥的便秘。
 
@@ -700,19 +700,19 @@
 
 **决明子甘，能祛肝热，目疼收泪，仍止鼻血。**
 
-决明子味甘苦，性微寒。功能淸肝明目、润肠通便。常用于风热所致的头痛及目赤涩痛、羞明多泪的眼病，还可止肝经有热的鼻出血及治大便燥结不通。
+决明子味甘苦，性微寒。功能清肝明目、润肠通便。常用于风热所致的头痛及目赤涩痛、羞明多泪的眼病，还可止肝经有热的鼻出血及治大便燥结不通。
 
 **犀角酸寒，化毒辟邪。解热止血，消肿毒蛇。**
 
 **犀**xi 读西。
 
-犀角味苦酸微咸，性寒，功能清热解毒，凉血止血，淸心安神。可治热邪入于血分，出现神昏谵语、惊狂、发斑发疹和热盛迫血妄行的吐血、衄血、便血等症。亦常用于疔疮肿毒或毒蛇咬伤，毒邪内陷，出现神志昏迷等。
+犀角味苦酸微咸，性寒，功能清热解毒，凉血止血，清心安神。可治热邪入于血分，出现神昏谵语、惊狂、发斑发疹和热盛迫血妄行的吐血、衄血、便血等症。亦常用于疔疮肿毒或毒蛇咬伤，毒邪内陷，出现神志昏迷等。
 
 **羚羊角寒，明目清肝，祛惊解毒，神志能安。**
 
 **羚**ling，读玲。
 
-羚羊角味咸，性寒。功能平肝息风、淸肝明目、淸热解毒。可治肝热目赤，羞明疼痛等症，亦可治温热病高热神昏痉挛和小儿惊风、四肢抽搐等症。
+羚羊角味咸，性寒。功能平肝息风、清肝明目、清热解毒。可治肝热目赤，羞明疼痛等症，亦可治温热病高热神昏痉挛和小儿惊风、四肢抽搐等症。
 
 **龟甲味甘，滋阴补肾，止血续筋，更医烦囟。**
 
@@ -762,7 +762,7 @@
 
 **地肤子寒，去膀胱热，皮肤搔痒，除热甚捷。**
 
-地肤子味甘苦，性寒，功能淸热利尿、祛风止痒。可治下焦湿热引起的小便不利、淋漓涩痛之证。外洗可治皮肤湿疮、周身搔痒。本品对于淸除皮肤湿热的疗效较快。
+地肤子味甘苦，性寒，功能清热利尿、祛风止痒。可治下焦湿热引起的小便不利、淋漓涩痛之证。外洗可治皮肤湿疮、周身搔痒。本品对于清除皮肤湿热的疗效较快。
 
 **楝根性寒，能追诸虫，疼痛立止，积聚立通。**
 
@@ -828,7 +828,7 @@
 
 **蔹** lian 读敛。
 
-白蔹味苦辛，性微寒，功能淸火解毒、消肿止痛。可治小儿疟症和因热引起的惊痛；并治妇女阴部肿痛及痈肿疔疮、发背初起、汤火灼伤。
+白蔹味苦辛，性微寒，功能清火解毒、消肿止痛。可治小儿疟症和因热引起的惊痛；并治妇女阴部肿痛及痈肿疔疮、发背初起、汤火灼伤。
 
 **青蒿气寒，童便熬膏，虚热盗汗，除骨蒸劳。**
 
@@ -836,7 +836,7 @@
 
 **茅根味甘，通关逐淤，止吐衄血，客热可去。**
 
-茅根味甘，性寒，功能凉血止血、淸热利尿、通关窍。常用于热证的吐血、衄血、尿血，以及小便不利等症。还能清肺胃热邪。
+茅根味甘，性寒，功能凉血止血、清热利尿、通关窍。常用于热证的吐血、衄血、尿血，以及小便不利等症。还能清肺胃热邪。
 
 **大小蓟苦，消肿破血，吐衄咯唾，崩漏可啜。**
 
@@ -1062,7 +1062,7 @@
 
 **田螺性冷，利大小便，消肿除热，醒酒立見。**
 
-田螺味甘，性大寒，功能淸热、通利大小便。可治热结的小便不通和大便秘结；并治目赤肿痛和痔疮肿痛。此外，治醉酒不醒，也见效较快。
+田螺味甘，性大寒，功能清热、通利大小便。可治热结的小便不通和大便秘结；并治目赤肿痛和痔疮肿痛。此外，治醉酒不醒，也见效较快。
 
 **水蛭味咸，除积淤坚，通经堕产，折伤可痊。**
 
@@ -1262,7 +1262,7 @@
 
 **斛**hu，读勿。
 
-石斛味甘，性微寒，有滋阴淸热、养胃生津的作用。适用于久病阴虚内热而见口干少食，以及虚热未退或热病伤阴，胃阴不足等症；并可定惊、安神。
+石斛味甘，性微寒，有滋阴清热、养胃生津的作用。适用于久病阴虚内热而见口干少食，以及虚热未退或热病伤阴，胃阴不足等症；并可定惊、安神。
 
 按：本品性寒而滋润，无散寒作用，对冷痹不能用。
 
@@ -1370,7 +1370,7 @@
 
 **熊胆味苦，热蒸黄疸，恶疮虫痔，五疳惊痫。**
 
-熊胆味苦，性寒，有淸热镇惊、解毒杀虫的作用。内服可治湿热黄疸、小儿疳积和热盛的惊痫；外用能治热毒疮疡、痔疮肿痛及肝热所致的目赤肿痛、羞明、障翳等症。
+熊胆味苦，性寒，有清热镇惊、解毒杀虫的作用。内服可治湿热黄疸、小儿疳积和热盛的惊痫；外用能治热毒疮疡、痔疮肿痛及肝热所致的目赤肿痛、羞明、障翳等症。
 
 **硇砂有毒，溃痈烂肉，除翳生肌，破癥消毒。**
 
