--- a/ok/qs/qs03_14.md
+++ b/ok/qs/qs03_14.md
@@ -146,7 +146,7 @@
 
 本方由橘皮，竹茹，大枣，生姜，人参，甘草等六味药组成、功能补中降逆。主治胃虚有热所致之呕吐呃逆等症。
 
-本方加茯苓，麦冬，半夏，枇杷叶，名济生橘皮竹茹汤，功能养阴淸胃，主治口渴，呕吐，呃逆，不食等症。
+本方加茯苓，麦冬，半夏，枇杷叶，名济生橘皮竹茹汤，功能养阴清胃，主治口渴，呕吐，呃逆，不食等症。
 
 本方去人参，大枣，甘草，加柿蒂，名新制橘皮竹茹汤，功降能逆止呃、主治胃热呃逆等症。
 
