--- a/ok/qs/qs03_21.md
+++ b/ok/qs/qs03_21.md
@@ -70,7 +70,7 @@
 
 **银花三两水煎服，湿热痈疮功可钦。**
 
-本方由茯苓、车前子、金银花、牛膝、紫花地丁等五味药组成，功能淸热解毒，主治下肢丹毒、痈疮。
+本方由茯苓、车前子、金银花、牛膝、紫花地丁等五味药组成，功能清热解毒，主治下肢丹毒、痈疮。
 
 **7.消瘰丸**
 
@@ -96,7 +96,7 @@
 
 本方去川芎、当归、山甲，加乳香、甘草名代刀散，亦治痈疮成脓不溃。
 
-托里透脓散由人参、白术、穿山甲、白芷、升麻、甘草节、当归、生黄芪、皂角刺、靑皮等十味药组成，功能益气养血，托里透脓。主治痈疮亏损，将溃之时毒气内陷。
+托里透脓散由人参、白术、穿山甲、白芷、升麻、甘草节、当归、生黄芪、皂角刺、青皮等十味药组成，功能益气养血，托里透脓。主治痈疮亏损，将溃之时毒气内陷。
 
 ### **【痈疡阴证】**
 
