--- a/ok/qs/qs05.md
+++ b/ok/qs/qs05.md
@@ -388,7 +388,7 @@
 
 **水肿病，有阴阳，清利便，阴水殃，便短缩，阳水伤。**
 
-水肿病有阴证与阳证之分，凡小便淸淡而畅行的，称为“阴水”；小便黄赤或短少不利的，属于“阳水”。
+水肿病有阴证与阳证之分，凡小便清淡而畅行的，称为“阴水”；小便黄赤或短少不利的，属于“阳水”。
 
 **五皮饮，元化方，阳水盛，加通防；阴水盛，加桂姜。知实肿，萝枳商；知虚肿，参术良；兼喘促，真武汤，从俗好，别低昂。**
 
@@ -450,7 +450,7 @@
 
 **精蕴** 蕴，yun，读愠，作精深、丰富解。 **仲师** 指张仲景。**标本** 此处指太阳病的标气和本气。古人说：“太阳本寒而标热”。
 
-若要深入地钻研有关暑证理论的精义奥蕴，必须师法张仲景。他在《伤寒论•太阳病》篇里，已经把暑证发病涉及的经脉和标本问题分辨得很淸楚了，可在这些法则的基础上变通运用，仲景治这种病用白虎加入人参汤或一物瓜蒂散，如果运用恰当效果是很神奇的（方见《金匮要略》）。
+若要深入地钻研有关暑证理论的精义奥蕴，必须师法张仲景。他在《伤寒论•太阳病》篇里，已经把暑证发病涉及的经脉和标本问题分辨得很清楚了，可在这些法则的基础上变通运用，仲景治这种病用白虎加入人参汤或一物瓜蒂散，如果运用恰当效果是很神奇的（方见《金匮要略》）。
 
 ## **泄泻第十四**
 
@@ -738,7 +738,7 @@
 
 **悬** 作悬殊、区别解。 **补当贵** 此处指补法使用的要合适、恰当。**方而圆** 既要按照规矩，又要能灵活变通。
 
-《伤寒论》中所论述的汗、吐、下、温、淸、补等治疗大法。在临床运用时，应注意其区别，有的放矢。就以补法为例，必须是确已“虚”当用“补”的情况下才能使用，而且贵在补得合适、恰当，否则不徒无益，反而有害。总之，一部《伤寒论》，全是活法，既有规矩法度可以遵循，又须灵活变通。
+《伤寒论》中所论述的汗、吐、下、温、清、补等治疗大法。在临床运用时，应注意其区别，有的放矢。就以补法为例，必须是确已“虚”当用“补”的情况下才能使用，而且贵在补得合适、恰当，否则不徒无益，反而有害。总之，一部《伤寒论》，全是活法，既有规矩法度可以遵循，又须灵活变通。
 
 **规矩废，甚于今，二陈尚，九味寻，香苏外，平胃临，汗源涸，耗真阴，邪传遍，病日深，目击者，实痛心！医医法，脑后针。**
 
@@ -756,7 +756,7 @@
 
 **达原饮** 方剂名。 **昧**mei，读妹，糊涂不清。
 
-治疗瘟疫，也就不离于《伤寒论》之汗、吐、下、淸、温、补几种方法，其中尤其以汗法为最重要。那些只知道用达原饮这个方子统治瘟疫病的，实际上是没有弄明白瘟疫病的致病之由，希望掌握病人安危的医生，不要随波逐流。
+治疗瘟疫，也就不离于《伤寒论》之汗、吐、下、清、温、补几种方法，其中尤其以汗法为最重要。那些只知道用达原饮这个方子统治瘟疫病的，实际上是没有弄明白瘟疫病的致病之由，希望掌握病人安危的医生，不要随波逐流。
 
 ## **妇人杂病第二十三**
 
@@ -814,7 +814,7 @@
 
 **㽲**jao，读绞，腹中拘急，绵绵而痛。 **谧**mi，读密。作平净、安宁解。
 
-《金匮要略》书中，有关妇人腹痛诸条，须要详细研读，彻底弄淸。其中当归生姜羊肉汤，能治腹中㽲痛，使之平静安宁；如果腹痛、胀满，心烦不得卧，可用枳实芍药散；如果腹痛在脐或脐周部份，这是血淤作痛，用下淤血汤；又如产后小腹痛、发热、大便不通，傍晚时烦躁、说胡话，这是由于内有实热，可以用攻下和清热之法治疗。总之，不要固执地认为产后病皆属虚证而妄用补益。
+《金匮要略》书中，有关妇人腹痛诸条，须要详细研读，彻底弄清。其中当归生姜羊肉汤，能治腹中㽲痛，使之平静安宁；如果腹痛、胀满，心烦不得卧，可用枳实芍药散；如果腹痛在脐或脐周部份，这是血淤作痛，用下淤血汤；又如产后小腹痛、发热、大便不通，傍晚时烦躁、说胡话，这是由于内有实热，可以用攻下和清热之法治疗。总之，不要固执地认为产后病皆属虚证而妄用补益。
 
 **杂病门，还熟读，二十方，效倶速，随证详，难悉录，惟温肾，带下服，甘麦汤，脏躁服，药到咽，效可卜，道中人，须造福。**
 
