--- a/ok/qs/qs01_03.md
+++ b/ok/qs/qs01_03.md
@@ -44,7 +44,7 @@
 
 **糜**mí，读迷，粥，烂。**飧**Sūn，读孙，泄泻完谷不化。
 
-胃火炽热上炎则口腔糜烂，心中不安，消谷快而容易饥饿。肠内有热则泻利时有热感，排出的粪便色黄而且象稠浓的稀粥。胃内有寒则淸冷寒厥，腹部胀痛。肠内有寒则小便色白，肠鸣泄泻，完谷不化。
+胃火炽热上炎则口腔糜烂，心中不安，消谷快而容易饥饿。肠内有热则泻利时有热感，排出的粪便色黄而且象稠浓的稀粥。胃内有寒则清冷寒厥，腹部胀痛。肠内有寒则小便色白，肠鸣泄泻，完谷不化。
 
 **6.形有强弱，肉有脆坚。强者难犯，弱者易干。**
 
