--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -72,7 +72,7 @@
 
 **平旦** 寅时，清晨。**疴**ke，读科，病。 **闰** run读润。
 
-诊脉常以清晨比较适宜，因为淸晨人的阴阳气血处于相对平衡状态，故容易发现有病的脉象。诊脉时要宁静心神，摒弃杂念，调匀呼吸（调息），仔细地审察。一息脉来四次为气血和平，脉来五次也是没有病的正常脉，因为在呼吸之间，有一延长呼吸（即深呼吸），一呼脉二动，一吸脉二动，太息之时脉一动，故一息脉五动是正常的脉象（闰以太息：闰，张景岳认为是“余”的意思，好象闰年闰月一样，太息指比较长的呼吸，也就是深呼吸）。
+诊脉常以清晨比较适宜，因为清晨人的阴阳气血处于相对平衡状态，故容易发现有病的脉象。诊脉时要宁静心神，摒弃杂念，调匀呼吸（调息），仔细地审察。一息脉来四次为气血和平，脉来五次也是没有病的正常脉，因为在呼吸之间，有一延长呼吸（即深呼吸），一呼脉二动，一吸脉二动，太息之时脉一动，故一息脉五动是正常的脉象（闰以太息：闰，张景岳认为是“余”的意思，好象闰年闰月一样，太息指比较长的呼吸，也就是深呼吸）。
 
 **8.三至为迟，迟则为冷。六至为数，数即热证。**
 
