--- a/ok/qs/qs03.md
+++ b/ok/qs/qs03.md
@@ -1766,7 +1766,7 @@
 
 **青箱草决犀羚药，参味连芩蒺草风。**
 
-本方由天门冬、麦门冬、党参、石斛、枸杞子、草决明、青箱子、防风、枳壳、牛膝、川芎、羚羊角、犀角、川连、黄芩、五味子、苁蓉、蒺藜子、菟丝子、生地黄、熟地黄等二十一味药组成。功能平肝淸热，滋肾明目。主治头晕目胀，视物昏花。
+本方由天门冬、麦门冬、党参、石斛、枸杞子、草决明、青箱子、防风、枳壳、牛膝、川芎、羚羊角、犀角、川连、黄芩、五味子、苁蓉、蒺藜子、菟丝子、生地黄、熟地黄等二十一味药组成。功能平肝清热，滋肾明目。主治头晕目胀，视物昏花。
 
 ### [补阳]
 
@@ -2112,7 +2112,7 @@
 
 本方由橘皮，竹茹，大枣，生姜，人参，甘草等六味药组成、功能补中降逆。主治胃虚有热所致之呕吐呃逆等症。
 
-本方加茯苓，麦冬，半夏，枇杷叶，名济生橘皮竹茹汤，功能养阴淸胃，主治口渴，呕吐，呃逆，不食等症。
+本方加茯苓，麦冬，半夏，枇杷叶，名济生橘皮竹茹汤，功能养阴清胃，主治口渴，呕吐，呃逆，不食等症。
 
 本方去人参，大枣，甘草，加柿蒂，名新制橘皮竹茹汤，功降能逆止呃、主治胃热呃逆等症。
 
@@ -2308,7 +2308,7 @@
 
 **牡蛎䗪虫僵蝉蜕，正虚血结此方超。**
 
-本方由鳖甲，龟甲，穿山甲，白僵蚕，牡蛎，白芍，当归，甘草，䗪虫，蝉蜕等九味药组成。功能逐淤通脉。主治温病后，神识不淸，默默不语之症。
+本方由鳖甲，龟甲，穿山甲，白僵蚕，牡蛎，白芍，当归，甘草，䗪虫，蝉蜕等九味药组成。功能逐淤通脉。主治温病后，神识不清，默默不语之症。
 
 ### 【止血】
 
@@ -2626,7 +2626,7 @@
 
 **芩翘贝母射干薄，暑疫湿温为未尝。**
 
-本方由滑石、茵陈、黄芩、石菖蒲、木通、川贝母、射干、连翘、薄荷、白蔻仁、藿香等十一味药组成，功能淸热化湿，主治舌苔黄腻，胸闷发热，尿短黄或发生黄疸等证。
+本方由滑石、茵陈、黄芩、石菖蒲、木通、川贝母、射干、连翘、薄荷、白蔻仁、藿香等十一味药组成，功能清热化湿，主治舌苔黄腻，胸闷发热，尿短黄或发生黄疸等证。
 
 **5.三仁汤**（附：藿朴夏苓汤）
 
@@ -2638,7 +2638,7 @@
 
 **主治湿温口不渴，胸闷口腻最有灵。**
 
-本方由杏仁、生薏仁、白蔻仁、滑石、通草、竹叶、厚朴、半夏等八味药组成，功能宣畅气机，淸利湿热，主治湿热初起，舌白腻、胸闷发热，口不渴之证。
+本方由杏仁、生薏仁、白蔻仁、滑石、通草、竹叶、厚朴、半夏等八味药组成，功能宣畅气机，清利湿热，主治湿热初起，舌白腻、胸闷发热，口不渴之证。
 
 本方去滑石、通草、竹叶，加入藿香、豆豉、茯苓、猪苓、泽泻，名藿朴夏苓汤，亦治湿温初起，身热不渴，肢体倦怠，胸闷口腻之证。
 
@@ -2656,7 +2656,7 @@
 
 **痿痹足疾堪多服，湿热全除病自痊。**
 
-本方由黄柏、苍术二味药组成，功能淸热燥湿，主治湿热痹证，关节肿痛、热痛，屈伸不便。
+本方由黄柏、苍术二味药组成，功能清热燥湿，主治湿热痹证，关节肿痛、热痛，屈伸不便。
 
 本方加牛膝，名三妙散，亦治关节疼痛和腰膝胀痛。
 
@@ -2666,7 +2666,7 @@
 
 **栀子柏皮加甘草，二方同属治阳黄。**
 
-本方由茵陈、栀子、大黄三味药组成，功能淸热利湿，主治湿热黄疸。
+本方由茵陈、栀子、大黄三味药组成，功能清热利湿，主治湿热黄疸。
 
 栀子柏皮汤由栀子、炙甘草、黄柏皮三味药组成，主治伤寒身热发黄。
 
@@ -2702,7 +2702,7 @@
 
 **吴萸厚朴草豆蔻，芪柏共煎中满匡。**
 
-本方由白术、人参、炙甘草、猪苓、姜黄、茯苓、干姜、砂仁、泽泻、陈皮、知母、黄芩、黄连、半夏、枳实、厚朴等十六味药组成，功能燥湿淸热，理气除胀，主治脘腹胀满，二便不利。
+本方由白术、人参、炙甘草、猪苓、姜黄、茯苓、干姜、砂仁、泽泻、陈皮、知母、黄芩、黄连、半夏、枳实、厚朴等十六味药组成，功能燥湿清热，理气除胀，主治脘腹胀满，二便不利。
 
 中满分消汤由川乌、当归、麻黄、荜澄茄、柴胡、生姜、干姜、人参、泽泻、黄连、青皮、厚朴、吴茱萸、草果、黄芪、黄柏、升麻、木香、半夏、茯苓、益智仁等二十一味药组成，功能补脾升阳，散寒理气，主治脏寒腹胀，暮夜其胀更甚。
 
@@ -2712,7 +2712,7 @@
 
 **滑夏栀芩并清热，骤作好吐泻凉服。**
 
-本方由滑石、淡豆豉、焦山栀、黄芩、佩兰、厚朴、半夏等七味药组成，功能淸暑利湿，主治霍乱吐泻，脘痞烦渴。
+本方由滑石、淡豆豉、焦山栀、黄芩、佩兰、厚朴、半夏等七味药组成，功能清暑利湿，主治霍乱吐泻，脘痞烦渴。
 
 **12.蚕矢汤**（《霍乱论》）
 
@@ -2730,7 +2730,7 @@
 
 白㾦 湿温病过程中于颈、项、胸腹皮肤所出现的一种细白水疱，状如水晶。
 
-本方由薏苡仁、竹叶、飞滑石、白蔻仁、连翘、茯苓、白通草等七味药组成，功能淸热利湿，主治发热身痛，汗多，腹泻，及胸腹部发生白㾦。
+本方由薏苡仁、竹叶、飞滑石、白蔻仁、连翘、茯苓、白通草等七味药组成，功能清热利湿，主治发热身痛，汗多，腹泻，及胸腹部发生白㾦。
 
 ### **【利水化湿】**
 
@@ -2748,7 +2748,7 @@
 
 本方去桂枝名四苓散，亦治小便不利，大便溏泻和水入则吐之证。
 
-本方加茵陈，名茵陈五苓散，功能淸热利湿，主治湿热黄疸。
+本方加茵陈，名茵陈五苓散，功能清热利湿，主治湿热黄疸。
 
 本方合平胃散，名胃苓汤，功能健脾利湿和中，主治湿滞伤食，脘腹胀满，腹痛泄泻。
 
@@ -2884,7 +2884,7 @@
 
 **经霜收下冬桑叶，清肺润燥效堪夸。**
 
-本方由冬桑叶、石膏、人参、甘草、胡麻仁、阿胶、麦冬、杏仁、枇杷叶等九味药组成，功能淸燥润肺，主治心烦口渴，咽喉干燥，干咳无痰。
+本方由冬桑叶、石膏、人参、甘草、胡麻仁、阿胶、麦冬、杏仁、枇杷叶等九味药组成，功能清燥润肺，主治心烦口渴，咽喉干燥，干咳无痰。
 
 **4.沙参麦冬汤**
 
@@ -2900,7 +2900,7 @@
 
 **马勃薄荷栀犀草，透邪清里两解方。**
 
-本方由山栀、豆豉、银花、薄荷、牛蒡子、甘草、犀角、白僵蚕、连翘壳、苦桔梗、蝉衣等十一味药组成，功能淸利咽喉，主治发热、咳嗽痰多，咽喉肿痛。
+本方由山栀、豆豉、银花、薄荷、牛蒡子、甘草、犀角、白僵蚕、连翘壳、苦桔梗、蝉衣等十一味药组成，功能清利咽喉，主治发热、咳嗽痰多，咽喉肿痛。
 
 **6.清咽养营汤**（《疫喉浅论》或《温病学》）
 
@@ -2942,7 +2942,7 @@
 
 **薄荷贝母丹皮入，时疫白喉是妙方。**
 
-本方由生地黄、麦冬、甘草、玄参、贝母、牡丹皮、薄荷、白芍等八味药组成，功能养阴淸肺，主治白喉初起，发热，咽喉肿痛，鼻干唇燥等症。
+本方由生地黄、麦冬、甘草、玄参、贝母、牡丹皮、薄荷、白芍等八味药组成，功能养阴清肺，主治白喉初起，发热，咽喉肿痛，鼻干唇燥等症。
 
 **10.五汁饮**
 
@@ -3056,7 +3056,7 @@
 
 **除却人参甘大枣，加实桔连瓜蒌仁。**
 
-本方由黄连、半夏、瓜蒌实等三味药组成，功能淸热化痰，宽胸散结。主治咳嗽痰稠，胸脘痞满作痛。
+本方由黄连、半夏、瓜蒌实等三味药组成，功能清热化痰，宽胸散结。主治咳嗽痰稠，胸脘痞满作痛。
 
 小柴胡汤去人参、甘草、大枣，加枳实、桔梗、黄连、瓜蒌仁，名柴胡陷胸汤。治往来寒热、呕恶胸痞。
 
@@ -3210,7 +3210,7 @@
 
 **银花三两水煎服，湿热痈疮功可钦。**
 
-本方由茯苓、车前子、金银花、牛膝、紫花地丁等五味药组成，功能淸热解毒，主治下肢丹毒、痈疮。
+本方由茯苓、车前子、金银花、牛膝、紫花地丁等五味药组成，功能清热解毒，主治下肢丹毒、痈疮。
 
 **7.消瘰丸**
 
