--- a/ok/qs/qs03_.md
+++ b/ok/qs/qs03_.md
@@ -1766,7 +1766,7 @@
 
 **青箱草决犀羚药，参味连芩蒺草风。**
 
-本方由[天门冬](https://www.gmzyjc.com/read/bc/bc17-0.4.3.0.0.md)、[麦门冬](https://www.gmzyjc.com/read/bc/bc17-0.4.2.0.0.md)、[党参](https://www.gmzyjc.com/read/bc/bc17-0.1.2.0.0.md)、[石斛](https://www.gmzyjc.com/read/bc/bc17-0.4.4.0.0.md)、[枸杞](https://www.gmzyjc.com/read/bc/bc17-0.4.8.0.0.md)子、草决明、青箱子、[防风](https://www.gmzyjc.com/read/bc/bc01-1.1.5.0.0.md)、[枳壳](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[牛膝](https://www.gmzyjc.com/read/bc/bc12-0.0.21.0.0.md)、川芎、[羚羊角](https://www.gmzyjc.com/read/bc/bc10-0.0.1.0.0.md)、[犀角](https://www.gmzyjc.com/read/bc/bc03-0.3.1.0.0.md)、川连、[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)、[五味子](https://www.gmzyjc.com/read/bc/bc18-0.0.2.0.0.md)、苁蓉、[蒺藜子](https://www.gmzyjc.com/read/bc/bc17-0.2.7.2.0.0.md)、[菟丝子](https://www.gmzyjc.com/read/bc/bc17-0.2.7.0.0.md)、[生地黄](https://www.gmzyjc.com/read/bc/bc03-0.3.2.0.0.md)、[熟地黄](https://www.gmzyjc.com/read/bc/bc17-0.3.1.0.0.md)等二十一味药组成。功能平肝淸热，滋肾明目。主治头晕目胀，视物昏花。
+本方由[天门冬](https://www.gmzyjc.com/read/bc/bc17-0.4.3.0.0.md)、[麦门冬](https://www.gmzyjc.com/read/bc/bc17-0.4.2.0.0.md)、[党参](https://www.gmzyjc.com/read/bc/bc17-0.1.2.0.0.md)、[石斛](https://www.gmzyjc.com/read/bc/bc17-0.4.4.0.0.md)、[枸杞](https://www.gmzyjc.com/read/bc/bc17-0.4.8.0.0.md)子、草决明、青箱子、[防风](https://www.gmzyjc.com/read/bc/bc01-1.1.5.0.0.md)、[枳壳](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[牛膝](https://www.gmzyjc.com/read/bc/bc12-0.0.21.0.0.md)、川芎、[羚羊角](https://www.gmzyjc.com/read/bc/bc10-0.0.1.0.0.md)、[犀角](https://www.gmzyjc.com/read/bc/bc03-0.3.1.0.0.md)、川连、[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)、[五味子](https://www.gmzyjc.com/read/bc/bc18-0.0.2.0.0.md)、苁蓉、[蒺藜子](https://www.gmzyjc.com/read/bc/bc17-0.2.7.2.0.0.md)、[菟丝子](https://www.gmzyjc.com/read/bc/bc17-0.2.7.0.0.md)、[生地黄](https://www.gmzyjc.com/read/bc/bc03-0.3.2.0.0.md)、[熟地黄](https://www.gmzyjc.com/read/bc/bc17-0.3.1.0.0.md)等二十一味药组成。功能平肝清热，滋肾明目。主治头晕目胀，视物昏花。
 
 ### [补阳]
 
@@ -2112,7 +2112,7 @@
 
 本方由橘皮，[竹茹](https://www.gmzyjc.com/read/bc/bc16-0.2.5.0.0.md)，[大枣](https://www.gmzyjc.com/read/bc/bc17-0.1.9.0.0.md)，[生姜](https://www.gmzyjc.com/read/bc/bc01-1.1.13.0.0.md)，[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)，[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)等六味药组成、功能补中降逆。主治胃虚有热所致之呕吐呃逆等症。
 
-本方加[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)，麦冬，[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)，[枇杷叶](https://www.gmzyjc.com/read/bc/bc16-0.3.9.0.0.md)，名济生橘皮[竹茹](https://www.gmzyjc.com/read/bc/bc16-0.2.5.0.0.md)汤，功能养阴淸胃，主治口渴，呕吐，呃逆，不食等症。
+本方加[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)，麦冬，[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)，[枇杷叶](https://www.gmzyjc.com/read/bc/bc16-0.3.9.0.0.md)，名济生橘皮[竹茹](https://www.gmzyjc.com/read/bc/bc16-0.2.5.0.0.md)汤，功能养阴清胃，主治口渴，呕吐，呃逆，不食等症。
 
 本方去[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)，[大枣](https://www.gmzyjc.com/read/bc/bc17-0.1.9.0.0.md)，[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)，加柿蒂，名新制橘皮[竹茹](https://www.gmzyjc.com/read/bc/bc16-0.2.5.0.0.md)汤，功降能逆止呃、主治胃热呃逆等症。
 
@@ -2308,7 +2308,7 @@
 
 **[牡蛎](https://www.gmzyjc.com/read/bc/bc09-0.1.5.0.0.md)䗪虫僵[蝉蜕](https://www.gmzyjc.com/read/bc/bc01-1.2.5.0.0.md)，正虚血结此方超。**
 
-本方由[鳖甲](https://www.gmzyjc.com/read/bc/bc17-0.4.15.0.0.md)，龟甲，[穿山甲](https://www.gmzyjc.com/read/bc/bc12-0.0.15.0.0.md)，白[僵蚕](https://www.gmzyjc.com/read/bc/bc10-0.0.8.0.0.md)，[牡蛎](https://www.gmzyjc.com/read/bc/bc09-0.1.5.0.0.md)，[白芍](https://www.gmzyjc.com/read/bc/bc17-0.3.4.0.0.md)，[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)，[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)，䗪虫，[蝉蜕](https://www.gmzyjc.com/read/bc/bc01-1.2.5.0.0.md)等九味药组成。功能逐淤通脉。主治温病后，神识不淸，默默不语之症。
+本方由[鳖甲](https://www.gmzyjc.com/read/bc/bc17-0.4.15.0.0.md)，龟甲，[穿山甲](https://www.gmzyjc.com/read/bc/bc12-0.0.15.0.0.md)，白[僵蚕](https://www.gmzyjc.com/read/bc/bc10-0.0.8.0.0.md)，[牡蛎](https://www.gmzyjc.com/read/bc/bc09-0.1.5.0.0.md)，[白芍](https://www.gmzyjc.com/read/bc/bc17-0.3.4.0.0.md)，[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)，[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)，䗪虫，[蝉蜕](https://www.gmzyjc.com/read/bc/bc01-1.2.5.0.0.md)等九味药组成。功能逐淤通脉。主治温病后，神识不清，默默不语之症。
 
 ### 【止血】
 
@@ -2626,7 +2626,7 @@
 
 **芩翘[贝母](https://www.gmzyjc.com/read/bc/bc16-0.2.3.0.0.md)[射干](https://www.gmzyjc.com/read/bc/bc03-0.4.11.0.0.md)薄，暑疫湿温为未尝。**
 
-本方由[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)、[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)、[石菖蒲](https://www.gmzyjc.com/read/bc/bc08-0.0.5.0.0.md)、[木通](https://www.gmzyjc.com/read/bc/bc05-0.0.8.0.0.md)、川[贝母](https://www.gmzyjc.com/read/bc/bc16-0.2.3.0.0.md)、[射干](https://www.gmzyjc.com/read/bc/bc03-0.4.11.0.0.md)、[连翘](https://www.gmzyjc.com/read/bc/bc03-0.4.2.0.0.md)、[薄荷](https://www.gmzyjc.com/read/bc/bc01-1.2.1.0.0.md)、白蔻仁、[藿香](https://www.gmzyjc.com/read/bc/bc04-0.0.1.0.0.md)等十一味药组成，功能淸热化湿，主治舌苔黄腻，胸闷发热，尿短黄或发生黄疸等证。
+本方由[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)、[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)、[石菖蒲](https://www.gmzyjc.com/read/bc/bc08-0.0.5.0.0.md)、[木通](https://www.gmzyjc.com/read/bc/bc05-0.0.8.0.0.md)、川[贝母](https://www.gmzyjc.com/read/bc/bc16-0.2.3.0.0.md)、[射干](https://www.gmzyjc.com/read/bc/bc03-0.4.11.0.0.md)、[连翘](https://www.gmzyjc.com/read/bc/bc03-0.4.2.0.0.md)、[薄荷](https://www.gmzyjc.com/read/bc/bc01-1.2.1.0.0.md)、白蔻仁、[藿香](https://www.gmzyjc.com/read/bc/bc04-0.0.1.0.0.md)等十一味药组成，功能清热化湿，主治舌苔黄腻，胸闷发热，尿短黄或发生黄疸等证。
 
 **5.[三仁汤](https://www.gmzyjc.com/read/fjx/fjx10-0.3.0.0.0.md)**（附：藿朴夏苓汤）
 
@@ -2638,7 +2638,7 @@
 
 **主治湿温口不渴，胸闷口腻最有灵。**
 
-本方由[杏仁](https://www.gmzyjc.com/read/bc/bc16-0.3.1.0.0.md)、生薏仁、白蔻仁、[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、[通草](https://www.gmzyjc.com/read/bc/bc05-0.0.9.0.0.md)、[竹叶](https://www.gmzyjc.com/read/bc/bc03-0.1.6.0.0.md)、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)等八味药组成，功能宣畅气机，淸利湿热，主治湿热初起，舌白腻、胸闷发热，口不渴之证。
+本方由[杏仁](https://www.gmzyjc.com/read/bc/bc16-0.3.1.0.0.md)、生薏仁、白蔻仁、[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、[通草](https://www.gmzyjc.com/read/bc/bc05-0.0.9.0.0.md)、[竹叶](https://www.gmzyjc.com/read/bc/bc03-0.1.6.0.0.md)、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)等八味药组成，功能宣畅气机，清利湿热，主治湿热初起，舌白腻、胸闷发热，口不渴之证。
 
 本方去[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、[通草](https://www.gmzyjc.com/read/bc/bc05-0.0.9.0.0.md)、[竹叶](https://www.gmzyjc.com/read/bc/bc03-0.1.6.0.0.md)，加入[藿香](https://www.gmzyjc.com/read/bc/bc04-0.0.1.0.0.md)、豆豉、[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)、[猪苓](https://www.gmzyjc.com/read/bc/bc05-0.0.3.0.0.md)、[泽泻](https://www.gmzyjc.com/read/bc/bc05-0.0.4.0.0.md)，名藿朴夏苓汤，亦治湿温初起，身热不渴，肢体倦怠，胸闷口腻之证。
 
@@ -2656,7 +2656,7 @@
 
 **痿痹足疾堪多服，湿热全除病自痊。**
 
-本方由[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)、[苍术](https://www.gmzyjc.com/read/bc/bc04-0.0.2.0.0.md)二味药组成，功能淸热燥湿，主治湿热痹证，关节肿痛、热痛，屈伸不便。
+本方由[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)、[苍术](https://www.gmzyjc.com/read/bc/bc04-0.0.2.0.0.md)二味药组成，功能清热燥湿，主治湿热痹证，关节肿痛、热痛，屈伸不便。
 
 本方加[牛膝](https://www.gmzyjc.com/read/bc/bc12-0.0.21.0.0.md)，名三妙散，亦治关节疼痛和腰膝胀痛。
 
@@ -2666,7 +2666,7 @@
 
 **栀子柏皮加[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)，二方同属治阳黄。**
 
-本方由[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)、栀子、[大黄](https://www.gmzyjc.com/read/bc/bc02-0.1.1.0.0.md)三味药组成，功能淸热利湿，主治湿热黄疸。
+本方由[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)、栀子、[大黄](https://www.gmzyjc.com/read/bc/bc02-0.1.1.0.0.md)三味药组成，功能清热利湿，主治湿热黄疸。
 
 栀子柏皮汤由栀子、炙[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)皮三味药组成，主治伤寒身热发黄。
 
@@ -2702,7 +2702,7 @@
 
 **吴萸[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)[草豆蔻](https://www.gmzyjc.com/read/bc/bc04-0.0.6.0.0.md)，芪柏共煎中满匡。**
 
-本方由[白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md)、[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、炙[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[猪苓](https://www.gmzyjc.com/read/bc/bc05-0.0.3.0.0.md)、[姜黄](https://www.gmzyjc.com/read/bc/bc12-0.0.4.0.0.md)、[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)、[干姜](https://www.gmzyjc.com/read/bc/bc07-0.4.0.0.0.md)、[砂仁](https://www.gmzyjc.com/read/bc/bc04-0.0.4.0.0.md)、[泽泻](https://www.gmzyjc.com/read/bc/bc05-0.0.4.0.0.md)、[陈皮](https://www.gmzyjc.com/read/bc/bc11-0.0.1.0.0.md)、[知母](https://www.gmzyjc.com/read/bc/bc03-0.1.2.0.0.md)、[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)、[黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)、[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)等十六味药组成，功能燥湿淸热，理气除胀，主治脘腹胀满，二便不利。
+本方由[白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md)、[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、炙[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[猪苓](https://www.gmzyjc.com/read/bc/bc05-0.0.3.0.0.md)、[姜黄](https://www.gmzyjc.com/read/bc/bc12-0.0.4.0.0.md)、[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)、[干姜](https://www.gmzyjc.com/read/bc/bc07-0.4.0.0.0.md)、[砂仁](https://www.gmzyjc.com/read/bc/bc04-0.0.4.0.0.md)、[泽泻](https://www.gmzyjc.com/read/bc/bc05-0.0.4.0.0.md)、[陈皮](https://www.gmzyjc.com/read/bc/bc11-0.0.1.0.0.md)、[知母](https://www.gmzyjc.com/read/bc/bc03-0.1.2.0.0.md)、[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)、[黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)、[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)等十六味药组成，功能燥湿清热，理气除胀，主治脘腹胀满，二便不利。
 
 中满分消汤由川乌、[当归](https://www.gmzyjc.com/read/bc/bc17-0.3.3.0.0.md)、[麻黄](https://www.gmzyjc.com/read/bc/bc01-1.1.1.0.0.md)、[荜澄茄](https://www.gmzyjc.com/read/bc/bc07-0.10.1.0.0.md)、[柴胡](https://www.gmzyjc.com/read/bc/bc01-1.2.9.0.0.md)、[生姜](https://www.gmzyjc.com/read/bc/bc01-1.1.13.0.0.md)、[干姜](https://www.gmzyjc.com/read/bc/bc07-0.4.0.0.0.md)、[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、[泽泻](https://www.gmzyjc.com/read/bc/bc05-0.0.4.0.0.md)、[黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)、[青皮](https://www.gmzyjc.com/read/bc/bc11-0.0.2.0.0.md)、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)、[吴茱萸](https://www.gmzyjc.com/read/bc/bc07-0.5.0.0.0.md)、[草果](https://www.gmzyjc.com/read/bc/bc04-0.0.7.0.0.md)、[黄芪](https://www.gmzyjc.com/read/bc/bc17-0.1.4.0.0.md)、[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)、[升麻](https://www.gmzyjc.com/read/bc/bc01-1.2.10.0.0.md)、[木香](https://www.gmzyjc.com/read/bc/bc11-0.0.5.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)、[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)、[益智仁](https://www.gmzyjc.com/read/bc/bc17-0.2.9.0.0.md)等二十一味药组成，功能补脾升阳，散寒理气，主治脏寒腹胀，暮夜其胀更甚。
 
@@ -2712,7 +2712,7 @@
 
 **滑夏栀芩并清热，骤作好吐泻凉服。**
 
-本方由[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、[淡豆豉](https://www.gmzyjc.com/read/bc/bc01-1.2.6.0.0.md)、焦山栀、[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)、佩兰、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)等七味药组成，功能淸暑利湿，主治霍乱吐泻，脘痞烦渴。
+本方由[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、[淡豆豉](https://www.gmzyjc.com/read/bc/bc01-1.2.6.0.0.md)、焦山栀、[黄芩](https://www.gmzyjc.com/read/bc/bc03-0.2.1.0.0.md)、佩兰、[厚朴](https://www.gmzyjc.com/read/bc/bc04-0.0.3.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)等七味药组成，功能清暑利湿，主治霍乱吐泻，脘痞烦渴。
 
 **12.蚕矢汤**（《霍乱论》）
 
@@ -2730,7 +2730,7 @@
 
 白㾦 湿温病过程中于颈、项、胸腹皮肤所出现的一种细白水疱，状如水晶。
 
-本方由[薏苡仁](https://www.gmzyjc.com/read/bc/bc05-0.0.5.0.0.md)、[竹叶](https://www.gmzyjc.com/read/bc/bc03-0.1.6.0.0.md)、飞[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、白蔻仁、[连翘](https://www.gmzyjc.com/read/bc/bc03-0.4.2.0.0.md)、[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)、白[通草](https://www.gmzyjc.com/read/bc/bc05-0.0.9.0.0.md)等七味药组成，功能淸热利湿，主治发热身痛，汗多，腹泻，及胸腹部发生白㾦。
+本方由[薏苡仁](https://www.gmzyjc.com/read/bc/bc05-0.0.5.0.0.md)、[竹叶](https://www.gmzyjc.com/read/bc/bc03-0.1.6.0.0.md)、飞[滑石](https://www.gmzyjc.com/read/bc/bc05-0.0.7.0.0.md)、白蔻仁、[连翘](https://www.gmzyjc.com/read/bc/bc03-0.4.2.0.0.md)、[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)、白[通草](https://www.gmzyjc.com/read/bc/bc05-0.0.9.0.0.md)等七味药组成，功能清热利湿，主治发热身痛，汗多，腹泻，及胸腹部发生白㾦。
 
 ### **【利水化湿】**
 
@@ -2748,7 +2748,7 @@
 
 本方去[桂枝](https://www.gmzyjc.com/read/bc/bc01-1.1.2.0.0.md)名四苓散，亦治小便不利，大便溏泻和水入则吐之证。
 
-本方加[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)，名[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)[五苓散](https://www.gmzyjc.com/read/fjx/fjx10-0.6.0.0.0.md)，功能淸热利湿，主治湿热黄疸。
+本方加[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)，名[茵陈](https://www.gmzyjc.com/read/bc/bc05-0.0.15.0.0.md)[五苓散](https://www.gmzyjc.com/read/fjx/fjx10-0.6.0.0.0.md)，功能清热利湿，主治湿热黄疸。
 
 本方合[平胃散](https://www.gmzyjc.com/read/fjx/fjx10-0.1.0.0.0.md)，名胃苓汤，功能健脾利湿和中，主治湿滞伤食，脘腹胀满，腹痛泄泻。
 
@@ -2884,7 +2884,7 @@
 
 **经霜收下冬[桑叶](https://www.gmzyjc.com/read/bc/bc01-1.2.3.0.0.md)，清肺润燥效堪夸。**
 
-本方由冬[桑叶](https://www.gmzyjc.com/read/bc/bc01-1.2.3.0.0.md)、[石膏](https://www.gmzyjc.com/read/bc/bc03-0.1.1.0.0.md)、[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[胡麻](https://www.gmzyjc.com/read/bc/bc17-0.4.16.0.0.md)仁、[阿胶](https://www.gmzyjc.com/read/bc/bc17-0.3.5.0.0.md)、麦冬、[杏仁](https://www.gmzyjc.com/read/bc/bc16-0.3.1.0.0.md)、[枇杷叶](https://www.gmzyjc.com/read/bc/bc16-0.3.9.0.0.md)等九味药组成，功能淸燥润肺，主治心烦口渴，咽喉干燥，干咳无痰。
+本方由冬[桑叶](https://www.gmzyjc.com/read/bc/bc01-1.2.3.0.0.md)、[石膏](https://www.gmzyjc.com/read/bc/bc03-0.1.1.0.0.md)、[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[胡麻](https://www.gmzyjc.com/read/bc/bc17-0.4.16.0.0.md)仁、[阿胶](https://www.gmzyjc.com/read/bc/bc17-0.3.5.0.0.md)、麦冬、[杏仁](https://www.gmzyjc.com/read/bc/bc16-0.3.1.0.0.md)、[枇杷叶](https://www.gmzyjc.com/read/bc/bc16-0.3.9.0.0.md)等九味药组成，功能清燥润肺，主治心烦口渴，咽喉干燥，干咳无痰。
 
 **4.[沙参麦冬汤](https://www.gmzyjc.com/read/fjx/fjx07-0.8.0.0.0.md)**
 
@@ -2900,7 +2900,7 @@
 
 **[马勃](https://www.gmzyjc.com/read/bc/bc03-0.4.9.0.0.md)[薄荷](https://www.gmzyjc.com/read/bc/bc01-1.2.1.0.0.md)栀犀草，透邪清里两解方。**
 
-本方由山栀、豆豉、银花、[薄荷](https://www.gmzyjc.com/read/bc/bc01-1.2.1.0.0.md)、[牛蒡子](https://www.gmzyjc.com/read/bc/bc01-1.2.2.0.0.md)、[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[犀角](https://www.gmzyjc.com/read/bc/bc03-0.3.1.0.0.md)、白[僵蚕](https://www.gmzyjc.com/read/bc/bc10-0.0.8.0.0.md)、[连翘](https://www.gmzyjc.com/read/bc/bc03-0.4.2.0.0.md)壳、苦[桔梗](https://www.gmzyjc.com/read/bc/bc16-0.2.2.0.0.md)、蝉衣等十一味药组成，功能淸利咽喉，主治发热、咳嗽痰多，咽喉肿痛。
+本方由山栀、豆豉、银花、[薄荷](https://www.gmzyjc.com/read/bc/bc01-1.2.1.0.0.md)、[牛蒡子](https://www.gmzyjc.com/read/bc/bc01-1.2.2.0.0.md)、[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[犀角](https://www.gmzyjc.com/read/bc/bc03-0.3.1.0.0.md)、白[僵蚕](https://www.gmzyjc.com/read/bc/bc10-0.0.8.0.0.md)、[连翘](https://www.gmzyjc.com/read/bc/bc03-0.4.2.0.0.md)壳、苦[桔梗](https://www.gmzyjc.com/read/bc/bc16-0.2.2.0.0.md)、蝉衣等十一味药组成，功能清利咽喉，主治发热、咳嗽痰多，咽喉肿痛。
 
 **6.清咽养营汤**（《疫喉浅论》或《温病学》）
 
@@ -2942,7 +2942,7 @@
 
 **[薄荷](https://www.gmzyjc.com/read/bc/bc01-1.2.1.0.0.md)[贝母](https://www.gmzyjc.com/read/bc/bc16-0.2.3.0.0.md)丹皮入，时疫白喉是妙方。**
 
-本方由[生地黄](https://www.gmzyjc.com/read/bc/bc03-0.3.2.0.0.md)、麦冬、[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[玄参](https://www.gmzyjc.com/read/bc/bc03-0.3.4.0.0.md)、[贝母](https://www.gmzyjc.com/read/bc/bc16-0.2.3.0.0.md)、[牡丹皮](https://www.gmzyjc.com/read/bc/bc03-0.3.5.0.0.md)、[薄荷](https://www.gmzyjc.com/read/bc/bc01-1.2.1.0.0.md)、[白芍](https://www.gmzyjc.com/read/bc/bc17-0.3.4.0.0.md)等八味药组成，功能养阴淸肺，主治白喉初起，发热，咽喉肿痛，鼻干唇燥等症。
+本方由[生地黄](https://www.gmzyjc.com/read/bc/bc03-0.3.2.0.0.md)、麦冬、[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[玄参](https://www.gmzyjc.com/read/bc/bc03-0.3.4.0.0.md)、[贝母](https://www.gmzyjc.com/read/bc/bc16-0.2.3.0.0.md)、[牡丹皮](https://www.gmzyjc.com/read/bc/bc03-0.3.5.0.0.md)、[薄荷](https://www.gmzyjc.com/read/bc/bc01-1.2.1.0.0.md)、[白芍](https://www.gmzyjc.com/read/bc/bc17-0.3.4.0.0.md)等八味药组成，功能养阴清肺，主治白喉初起，发热，咽喉肿痛，鼻干唇燥等症。
 
 **10.五汁饮**
 
@@ -3056,7 +3056,7 @@
 
 **除却[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)甘[大枣](https://www.gmzyjc.com/read/bc/bc17-0.1.9.0.0.md)，加实桔连[瓜蒌](https://www.gmzyjc.com/read/bc/bc16-0.2.4.0.0.md)仁。**
 
-本方由[黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)、[瓜蒌](https://www.gmzyjc.com/read/bc/bc16-0.2.4.0.0.md)实等三味药组成，功能淸热化痰，宽胸散结。主治咳嗽痰稠，胸脘痞满作痛。
+本方由[黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)、[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)、[瓜蒌](https://www.gmzyjc.com/read/bc/bc16-0.2.4.0.0.md)实等三味药组成，功能清热化痰，宽胸散结。主治咳嗽痰稠，胸脘痞满作痛。
 
 [小柴胡汤](https://www.gmzyjc.com/read/fjx/fjx02-0.1.0.0.0.md)去[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)、[甘草](https://www.gmzyjc.com/read/bc/bc17-0.1.8.0.0.md)、[大枣](https://www.gmzyjc.com/read/bc/bc17-0.1.9.0.0.md)，加[枳实](https://www.gmzyjc.com/read/bc/bc11-0.0.3.0.0.md)、[桔梗](https://www.gmzyjc.com/read/bc/bc16-0.2.2.0.0.md)、[黄连](https://www.gmzyjc.com/read/bc/bc03-0.2.2.0.0.md)、[瓜蒌](https://www.gmzyjc.com/read/bc/bc16-0.2.4.0.0.md)仁，名[柴胡](https://www.gmzyjc.com/read/bc/bc01-1.2.9.0.0.md)陷胸汤。治往来寒热、呕恶胸痞。
 
@@ -3210,7 +3210,7 @@
 
 **银花三两水煎服，湿热痈疮功可钦。**
 
-本方由[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)、车前子、[金银花](https://www.gmzyjc.com/read/bc/bc03-0.4.1.0.0.md)、[牛膝](https://www.gmzyjc.com/read/bc/bc12-0.0.21.0.0.md)、[紫花地丁](https://www.gmzyjc.com/read/bc/bc03-0.4.4.0.0.md)等五味药组成，功能淸热解毒，主治下肢丹毒、痈疮。
+本方由[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md)、车前子、[金银花](https://www.gmzyjc.com/read/bc/bc03-0.4.1.0.0.md)、[牛膝](https://www.gmzyjc.com/read/bc/bc12-0.0.21.0.0.md)、[紫花地丁](https://www.gmzyjc.com/read/bc/bc03-0.4.4.0.0.md)等五味药组成，功能清热解毒，主治下肢丹毒、痈疮。
 
 **7.消瘰丸**
 
