--- a/ok/qs/qs03_11.md
+++ b/ok/qs/qs03_11.md
@@ -342,7 +342,7 @@
 
 **青箱草决犀羚药，参味连芩蒺草风。**
 
-本方由天门冬、麦门冬、党参、石斛、枸杞子、草决明、青箱子、防风、枳壳、牛膝、川芎、羚羊角、犀角、川连、黄芩、五味子、苁蓉、蒺藜子、菟丝子、生地黄、熟地黄等二十一味药组成。功能平肝淸热，滋肾明目。主治头晕目胀，视物昏花。
+本方由天门冬、麦门冬、党参、石斛、枸杞子、草决明、青箱子、防风、枳壳、牛膝、川芎、羚羊角、犀角、川连、黄芩、五味子、苁蓉、蒺藜子、菟丝子、生地黄、熟地黄等二十一味药组成。功能平肝清热，滋肾明目。主治头晕目胀，视物昏花。
 
 ### [补阳]
 
