--- a/ok/qs/qs03_15.md
+++ b/ok/qs/qs03_15.md
@@ -130,7 +130,7 @@
 
 **牡蛎䗪虫僵蝉蜕，正虚血结此方超。**
 
-本方由鳖甲，龟甲，穿山甲，白僵蚕，牡蛎，白芍，当归，甘草，䗪虫，蝉蜕等九味药组成。功能逐淤通脉。主治温病后，神识不淸，默默不语之症。
+本方由鳖甲，龟甲，穿山甲，白僵蚕，牡蛎，白芍，当归，甘草，䗪虫，蝉蜕等九味药组成。功能逐淤通脉。主治温病后，神识不清，默默不语之症。
 
 ### 【止血】
 
