--- a/ok/qs/qs03_18.md
+++ b/ok/qs/qs03_18.md
@@ -26,7 +26,7 @@
 
 **经霜收下冬桑叶，清肺润燥效堪夸。**
 
-本方由冬桑叶、石膏、人参、甘草、胡麻仁、阿胶、麦冬、杏仁、枇杷叶等九味药组成，功能淸燥润肺，主治心烦口渴，咽喉干燥，干咳无痰。
+本方由冬桑叶、石膏、人参、甘草、胡麻仁、阿胶、麦冬、杏仁、枇杷叶等九味药组成，功能清燥润肺，主治心烦口渴，咽喉干燥，干咳无痰。
 
 **4.沙参麦冬汤**
 
@@ -42,7 +42,7 @@
 
 **马勃薄荷栀犀草，透邪清里两解方。**
 
-本方由山栀、豆豉、银花、薄荷、牛蒡子、甘草、犀角、白僵蚕、连翘壳、苦桔梗、蝉衣等十一味药组成，功能淸利咽喉，主治发热、咳嗽痰多，咽喉肿痛。
+本方由山栀、豆豉、银花、薄荷、牛蒡子、甘草、犀角、白僵蚕、连翘壳、苦桔梗、蝉衣等十一味药组成，功能清利咽喉，主治发热、咳嗽痰多，咽喉肿痛。
 
 **6.清咽养营汤**（《疫喉浅论》或《温病学》）
 
@@ -84,7 +84,7 @@
 
 **薄荷贝母丹皮入，时疫白喉是妙方。**
 
-本方由生地黄、麦冬、甘草、玄参、贝母、牡丹皮、薄荷、白芍等八味药组成，功能养阴淸肺，主治白喉初起，发热，咽喉肿痛，鼻干唇燥等症。
+本方由生地黄、麦冬、甘草、玄参、贝母、牡丹皮、薄荷、白芍等八味药组成，功能养阴清肺，主治白喉初起，发热，咽喉肿痛，鼻干唇燥等症。
 
 **10.五汁饮**
 
