--- a/ok/qs/qs03_19.md
+++ b/ok/qs/qs03_19.md
@@ -74,7 +74,7 @@
 
 **除却人参甘大枣，加实桔连瓜蒌仁。**
 
-本方由黄连、半夏、瓜蒌实等三味药组成，功能淸热化痰，宽胸散结。主治咳嗽痰稠，胸脘痞满作痛。
+本方由黄连、半夏、瓜蒌实等三味药组成，功能清热化痰，宽胸散结。主治咳嗽痰稠，胸脘痞满作痛。
 
 小柴胡汤去人参、甘草、大枣，加枳实、桔梗、黄连、瓜蒌仁，名柴胡陷胸汤。治往来寒热、呕恶胸痞。
 
