--- a/ok/qs/qs03_17.md
+++ b/ok/qs/qs03_17.md
@@ -44,7 +44,7 @@
 
 **芩翘贝母射干薄，暑疫湿温为未尝。**
 
-本方由滑石、茵陈、黄芩、石菖蒲、木通、川贝母、射干、连翘、薄荷、白蔻仁、藿香等十一味药组成，功能淸热化湿，主治舌苔黄腻，胸闷发热，尿短黄或发生黄疸等证。
+本方由滑石、茵陈、黄芩、石菖蒲、木通、川贝母、射干、连翘、薄荷、白蔻仁、藿香等十一味药组成，功能清热化湿，主治舌苔黄腻，胸闷发热，尿短黄或发生黄疸等证。
 
 **5.三仁汤**（附：藿朴夏苓汤）
 
@@ -56,7 +56,7 @@
 
 **主治湿温口不渴，胸闷口腻最有灵。**
 
-本方由杏仁、生薏仁、白蔻仁、滑石、通草、竹叶、厚朴、半夏等八味药组成，功能宣畅气机，淸利湿热，主治湿热初起，舌白腻、胸闷发热，口不渴之证。
+本方由杏仁、生薏仁、白蔻仁、滑石、通草、竹叶、厚朴、半夏等八味药组成，功能宣畅气机，清利湿热，主治湿热初起，舌白腻、胸闷发热，口不渴之证。
 
 本方去滑石、通草、竹叶，加入藿香、豆豉、茯苓、猪苓、泽泻，名藿朴夏苓汤，亦治湿温初起，身热不渴，肢体倦怠，胸闷口腻之证。
 
@@ -74,7 +74,7 @@
 
 **痿痹足疾堪多服，湿热全除病自痊。**
 
-本方由黄柏、苍术二味药组成，功能淸热燥湿，主治湿热痹证，关节肿痛、热痛，屈伸不便。
+本方由黄柏、苍术二味药组成，功能清热燥湿，主治湿热痹证，关节肿痛、热痛，屈伸不便。
 
 本方加牛膝，名三妙散，亦治关节疼痛和腰膝胀痛。
 
@@ -84,7 +84,7 @@
 
 **栀子柏皮加甘草，二方同属治阳黄。**
 
-本方由茵陈、栀子、大黄三味药组成，功能淸热利湿，主治湿热黄疸。
+本方由茵陈、栀子、大黄三味药组成，功能清热利湿，主治湿热黄疸。
 
 栀子柏皮汤由栀子、炙甘草、黄柏皮三味药组成，主治伤寒身热发黄。
 
@@ -120,7 +120,7 @@
 
 **吴萸厚朴草豆蔻，芪柏共煎中满匡。**
 
-本方由白术、人参、炙甘草、猪苓、姜黄、茯苓、干姜、砂仁、泽泻、陈皮、知母、黄芩、黄连、半夏、枳实、厚朴等十六味药组成，功能燥湿淸热，理气除胀，主治脘腹胀满，二便不利。
+本方由白术、人参、炙甘草、猪苓、姜黄、茯苓、干姜、砂仁、泽泻、陈皮、知母、黄芩、黄连、半夏、枳实、厚朴等十六味药组成，功能燥湿清热，理气除胀，主治脘腹胀满，二便不利。
 
 中满分消汤由川乌、当归、麻黄、荜澄茄、柴胡、生姜、干姜、人参、泽泻、黄连、青皮、厚朴、吴茱萸、草果、黄芪、黄柏、升麻、木香、半夏、茯苓、益智仁等二十一味药组成，功能补脾升阳，散寒理气，主治脏寒腹胀，暮夜其胀更甚。
 
@@ -130,7 +130,7 @@
 
 **滑夏栀芩并清热，骤作好吐泻凉服。**
 
-本方由滑石、淡豆豉、焦山栀、黄芩、佩兰、厚朴、半夏等七味药组成，功能淸暑利湿，主治霍乱吐泻，脘痞烦渴。
+本方由滑石、淡豆豉、焦山栀、黄芩、佩兰、厚朴、半夏等七味药组成，功能清暑利湿，主治霍乱吐泻，脘痞烦渴。
 
 **12.蚕矢汤**（《霍乱论》）
 
@@ -148,7 +148,7 @@
 
 白㾦 湿温病过程中于颈、项、胸腹皮肤所出现的一种细白水疱，状如水晶。
 
-本方由薏苡仁、竹叶、飞滑石、白蔻仁、连翘、茯苓、白通草等七味药组成，功能淸热利湿，主治发热身痛，汗多，腹泻，及胸腹部发生白㾦。
+本方由薏苡仁、竹叶、飞滑石、白蔻仁、连翘、茯苓、白通草等七味药组成，功能清热利湿，主治发热身痛，汗多，腹泻，及胸腹部发生白㾦。
 
 ### **【利水化湿】**
 
@@ -166,7 +166,7 @@
 
 本方去桂枝名四苓散，亦治小便不利，大便溏泻和水入则吐之证。
 
-本方加茵陈，名茵陈五苓散，功能淸热利湿，主治湿热黄疸。
+本方加茵陈，名茵陈五苓散，功能清热利湿，主治湿热黄疸。
 
 本方合平胃散，名胃苓汤，功能健脾利湿和中，主治湿滞伤食，脘腹胀满，腹痛泄泻。
 
