--- a/ok/bc/bc09-0.2.1.0.0.md
+++ b/ok/bc/bc09-0.2.1.0.0.md
@@ -1,6 +1,6 @@
 ### 酸枣仁
 
-〔原文〕**甘酸而润**。凡仁皆润。**专补肝胆，炒熟酸温而香，亦能醒脾**。故归脾汤用之。**助阴气，坚筋骨，除烦止渴** 。敛阴生津。**敛汗**《经疏》曰：凡服固表药前汗木止者，用枣仁炒研，同生地、白芍、五味、麦冬、竹叶、龙眼肉煎服多效。汗为心液故也，**宁心**。心君易动，皆由胆怯所致，经曰：凡十一官皆取决于胆也。**疗胆虚不眠**。温胆汤中或加用之，肝虚则胆亦虚，肝不藏魂，故不寐；血不归脾，卧亦不安。《金匮》治虚劳虚烦不眠，用酸枣仁汤。枣仁二升，甘草一两炙，知母、茯苓、芎藭各二两，深师加生姜二两。此补肝之剂。经曰：卧则血归于肝。苏颂曰：一方加桂一两，二方枣仁并生用，治不得眠， 岂得以煮过便为熟乎？**痠痹**（1）**久泻**。酸收涩、香舒脾。**生用酸平，疗胆热好眠**。 李时珍曰：今人专以为心家药，殊昧此理。昂按：胆热必有心烦口苦之证。何以反能好乎？温胆汤治不眠，用二陈加竹茹、枳实，二味皆凉药，乃以凉肺胃之热，非以温胆经之寒也，其以温胆名汤者，以胆欲不寒不燥，当温为候耳，胆热好眠四字，不能无疑也。**炒研用，恶防己**。
+〔原文〕**甘酸而润**。<small>凡仁皆润。</small>**专补肝胆，炒熟酸温而香，亦能醒脾**。<small>故归脾汤用之。</small>**助阴气，坚筋骨，除烦止渴** 。<small>敛阴生津。</small>**敛汗**<small>《经疏》曰：凡服固表药前汗木止者，用枣仁炒研，同生地、白芍、五味、麦冬、竹叶、龙眼肉煎服多效。汗为心液故也，</small>**宁心**。<small>心君易动，皆由胆怯所致，经曰：凡十一官皆取决于胆也。</small>**疗胆虚不眠**。<small>温胆汤中或加用之，肝虚则胆亦虚，肝不藏魂，故不寐；血不归脾，卧亦不安。《金匮》治虚劳虚烦不眠，用酸枣仁汤。枣仁二升，甘草一两炙，知母、茯苓、芎藭各二两，深师加生姜二两。此补肝之剂。经曰：卧则血归于肝。苏颂曰：一方加桂一两，二方枣仁并生用，治不得眠， 岂得以煮过便为熟乎？</small>**痠痹**（1）**久泻**。<small>酸收涩、香舒脾。</small>**生用酸平，疗胆热好眠**。<small> 李时珍曰：今人专以为心家药，殊昧此理。昂按：胆热必有心烦口苦之证。何以反能好乎？温胆汤治不眠，用二陈加竹茹、枳实，二味皆凉药，乃以凉肺胃之热，非以温胆经之寒也，其以温胆名汤者，以胆欲不寒不燥，当温为候耳，胆热好眠四字，不能无疑也。</small>**炒研用，恶防己**。
 
 【讲解】（1）痠痹：即痹证以肌肉关节痠痛为主要证候者。
 
