--- a/ok/bc/bc10-0.0.2.0.0.md
+++ b/ok/bc/bc10-0.0.2.0.0.md
@@ -1,6 +1,6 @@
 ### 石决明
 
-**〔原文〕咸平。除肺肝风热，青盲内障，水飞点目外障。亦治骨蒸劳热，通五淋**，能清肺肝故也，古方多用治疡疽。**解酒酸**。为末，投热酒中即解。**如蚌而扁，唯一片无对，七孔九孔者良。盐水煮一伏时，或面裹煨熟，研粉极细水飞用。恶旋覆花**。
+**〔原文〕咸平。除肺肝风热，青盲内障，水飞点目外障。亦治骨蒸劳热，通五淋**，<small>能清肺肝故也，古方多用治疡疽。</small>**解酒酸**。<small>为末，投热酒中即解。</small>**如蚌而扁，唯一片无对，七孔九孔者良。盐水煮一伏时，或面裹煨熟，研粉极细水飞用。恶旋覆花**。
 
 【讲解】 **石决明以平肝潜阳为主要功效，并能清肝明目**。为鲍科动物杂色鲍（光底海决）或盘大鲍（毛底海决）的贝壳。系单一坚厚的贝壳，呈椭圆形。体螺层中部开始至体螺层边象，有30多个突起小孔，前端突起小而不明显，末端7—9个特大，且开孔和内部相通，故有“九孔石决”之名。打碎生用或煅用。
 
