--- a/ok/bc/bc11-0.0.1.0.0.md
+++ b/ok/bc/bc11-0.0.1.0.0.md
@@ -1,9 +1,9 @@
 ### 陈皮
 
-**〔原文〕辛能散，苦能燥能泻，温能补能和。同补药则补，泻药则泻，升药则升，降药则降。为脾肺气分之药**。脾为气母，肺为气龠。凡补药涩药，必佐陈皮以利气。**调中快膈，导滞消痰**，大法治痰，以健脾顺气为主。张洁古曰：陈皮、枳壳利其气，而痰自下。**利水破癥，宣通五脏，统治百病，皆取其理气燥湿之功**。 人身以气为主，气顺湿除，则百病散。《金匮》曰：能解鱼毒食毒。**多服久服，损人元气。入补养药则留白，入下气消痰药则去白**。
-《圣济》曰：不去白，反生痰。
+**〔原文〕辛能散，苦能燥能泻，温能补能和。同补药则补，泻药则泻，升药则升，降药则降。为脾肺气分之药**。<small>脾为气母，肺为气龠。凡补药涩药，必佐陈皮以利气。</small>**调中快膈，导滞消痰**，<small>大法治痰，以健脾顺气为主。张洁古曰：陈皮、枳壳利其气，而痰自下。</small>**利水破癥，宣通五脏，统治百病，皆取其理气燥湿之功**。 <small>人身以气为主，气顺湿除，则百病散。《金匮》曰：能解鱼毒食毒。</small>**多服久服，损人元气。入补养药则留白，入下气消痰药则去白**。
+<small>《圣济》曰：不去白，反生痰。</small>
 
-**去白名橘红，兼能除寒发表**。皮能发散皮肤。**核治疝痛，叶散乳痈**。 皆能入厥阴，行肝气，消肿散毒。腰肾冷痛，橘核炒酒服良。《十剂》曰：宣可去壅，生姜橘皮之属是也。《泊宅篇》曰，莫强中，食已辄胸满不下，百治不效。偶家人合橘皮汤，尝之似有味，连日饮之。一日坐厅事，觉胸中有物坠下，目瞪汗濡，大惊扶归，腹疼痛下数块如铁弹，臭不可闻，自此胸次廓然。盖脾之冷积也，半年服药不知，功乃在橘皮。方用橘红一斤，甘草、盐各四两，煮干点服，名二贤散，蒸饼名润下丸，治痰特有验。世医惟知半夏、南星、枳壳、茯苓之属，何足语此哉！朱丹溪曰：治痰，利药过多则脾虚，痰易生而反多。又曰：胃气亦赖痰以养，不可攻尽，攻尽则虚而愈剧。**广中陈久者良，故名陈皮**。陈则烈气消，无燥散之患。半夏亦然，故同用名二陈汤。**治痰咳童便浸晒，治痰积姜汁炒，治下焦盐水炒。去核皮炒用**。橘络入络化痰理气止嗽，为嗽血虚劳要药。
+**去白名橘红，兼能除寒发表**。<small>皮能发散皮肤。</small>**核治疝痛，叶散乳痈**。<small> 皆能入厥阴，行肝气，消肿散毒。腰肾冷痛，橘核炒酒服良。《十剂》曰：宣可去壅，生姜橘皮之属是也。《泊宅篇》曰，莫强中，食已辄胸满不下，百治不效。偶家人合橘皮汤，尝之似有味，连日饮之。一日坐厅事，觉胸中有物坠下，目瞪汗濡，大惊扶归，腹疼痛下数块如铁弹，臭不可闻，自此胸次廓然。盖脾之冷积也，半年服药不知，功乃在橘皮。方用橘红一斤，甘草、盐各四两，煮干点服，名二贤散，蒸饼名润下丸，治痰特有验。世医惟知半夏、南星、枳壳、茯苓之属，何足语此哉！朱丹溪曰：治痰，利药过多则脾虚，痰易生而反多。又曰：胃气亦赖痰以养，不可攻尽，攻尽则虚而愈剧。</small>**广中陈久者良，故名陈皮**。<small>陈则烈气消，无燥散之患。半夏亦然，故同用名二陈汤。</small>**治痰咳童便浸晒，治痰积姜汁炒，治下焦盐水炒。去核皮炒用**。<small>橘络入络化痰理气止嗽，为嗽血虚劳要药。</small>
 
 **化州橘红，辛微温。理气化痰，功力十倍。出化州。**
 
