--- a/ok/bc/bc11-0.0.3.0.0.md
+++ b/ok/bc/bc11-0.0.3.0.0.md
@@ -1,7 +1,6 @@
 ### 枳实、枳壳
 
-**〔原文〕苦酸微寒。其功皆能破气。气行则痰行喘止，痞胀消**，脾无积血，心下不痞；浊气在上，则生腹胀。李东垣曰：枳实治下而主血，枳壳治上而主气。**痛刺息，后重除。治胸痹结胸，食积五膈**（1），**痰癖癥结**(2)，**呕逆咳嗽，水肿胁胀，肝郁。泻痢淋闭，痔肿肠风，除风去痹**，辛散风。**开胃健脾，所主略同。但枳实利胸膈，枳壳**
-**宽脾胃；枳实力猛**，大、小承气汤皆用之。朱丹溪曰：根实泻痰，能冲墙倒壁。**枳壳力缓为少异。孕妇及气虚人忌用**。按本草壳、实皆云明目。思之不得其解，然目疾方中多用之，岂以其破浊气，即能升清气乎？《本经》又言枳实益气，想亦同此理也。故厚朴调中，亦有益气明目之文，王好古曰：枳实佐以参、术、干姜则益气，佐以硝、黄、牵牛则破气，此《本经》所以言益气，而复言消痞也。张元素曰:枳壳泄肺走大肠，多用损胸中至高之气。昔湖阳公主难产，方士进瘦胎饮，用枳壳四两、甘草三两，五月后日服一钱。张洁古改以枳术名束胎丸。寇宗奭明某不然，盖孕妇全赖血气以养胎，血气充实，胎乃易生。彼公主奉养太过 ，气实有余，故可服之，若概施则误矣。李时珍曰:八九月胎，气盛壅滞，用枳壳、苏梗以顺气。胎前无滞，则产后无虚也，气弱者大非所宜矣。**皮厚而小为枳实；壳簿虚大为枳壳。陈者良。麸炒用**。李时珍曰：壳、实上世未分，魏晋始分用。洁古、东。始分壳治上，实治下。海藏始分壳主气，实主血。然仲景治上焦胸痹、痞竭早枳实，诸方治下血痢痔肠秘后重用枳壳，则实不独治下，而壳不独治高也。盖自飞门至魄门，皆肺主之，三焦相通，一气而已。飞门，口也。魄门，即肛门。
+**〔原文〕苦酸微寒。其功皆能破气。气行则痰行喘止，痞胀消**，<small>脾无积血，心下不痞；浊气在上，则生腹胀。李东垣曰：枳实治下而主血，枳壳治上而主气。</small>**痛刺息，后重除。治胸痹结胸，食积五膈**（1），**痰癖癥结**(2)，**呕逆咳嗽，水肿胁胀，**<small>肝郁。</small>**泻痢淋闭，痔肿肠风，除风去痹**，<small>辛散风。</small>**开胃健脾，所主略同。但枳实利胸膈，枳壳宽脾胃；枳实力猛**，<small>大、小承气汤皆用之。朱丹溪曰：根实泻痰，能冲墙倒壁。</small>**枳壳力缓为少异。孕妇及气虚人忌用**。<small>按本草壳、实皆云明目。思之不得其解，然目疾方中多用之，岂以其破浊气，即能升清气乎？《本经》又言枳实益气，想亦同此理也。故厚朴调中，亦有益气明目之文，王好古曰：枳实佐以参、术、干姜则益气，佐以硝、黄、牵牛则破气，此《本经》所以言益气，而复言消痞也。张元素曰:枳壳泄肺走大肠，多用损胸中至高之气。昔湖阳公主难产，方士进瘦胎饮，用枳壳四两、甘草三两，五月后日服一钱。张洁古改以枳术名束胎丸。寇宗奭明某不然，盖孕妇全赖血气以养胎，血气充实，胎乃易生。彼公主奉养太过 ，气实有余，故可服之，若概施则误矣。李时珍曰:八九月胎，气盛壅滞，用枳壳、苏梗以顺气。胎前无滞，则产后无虚也，气弱者大非所宜矣。</small>**皮厚而小为枳实；壳簿虚大为枳壳。陈者良。麸炒用**。<small>李时珍曰：壳、实上世未分，魏晋始分用。洁古、东。始分壳治上，实治下。海藏始分壳主气，实主血。然仲景治上焦胸痹、痞竭早枳实，诸方治下血痢痔肠秘后重用枳壳，则实不独治下，而壳不独治高也。盖自飞门至魄门，皆肺主之，三焦相通，一气而已。飞门，口也。魄门，即肛门。</small>
 
 【讲解】（1）五膈：为忧膈、息膈、怒膈、恐膈、喜膈的总称。（2）癥结：指气血瘀滞成块。
 
