--- a/ok/bc/bc09-0.2.2.0.0.md
+++ b/ok/bc/bc09-0.2.2.0.0.md
@@ -1,6 +1,6 @@
 ### 柏子仁
 
-**〔原文〕辛甘而润。其气清香，能透心肾而悦脾**，昂按，凡补脾药多燥，此润药而香能舒脾，燥脾药中兼用最良。**养心气，润肾燥，助脾滋肝** 。王好古曰：肝经气分药。**益智宁神**，养心。**聪耳明目**，甘益血，香通窍。**益血止汗**。 心生血，汗为心液。**除风湿，愈惊痫，泽皮肤，辟鬼魅**(1)。**炒研去油，油透者勿用。畏菊花。**
+**〔原文〕辛甘而润。其气清香，能透心肾而悦脾**，<small>昂按，凡补脾药多燥，此润药而香能舒脾，燥脾药中兼用最良。</small>**养心气，润肾燥，助脾滋肝** 。<small>王好古曰：肝经气分药。</small>**益智宁神**，<small>养心。</small>**聪耳明目**，<small>甘益血，香通窍。</small>**益血止汗**。<small> 心生血，汗为心液。</small>**除风湿，愈惊痫，泽皮肤，辟鬼魅(1)。炒研去油，油透者勿用。畏菊花。**
 
 【讲解】	（1）辟鬼魅：魅即鬼怪。辟鬼魅是指能辟除一切致病的邪恶之气。
 
