--- a/ok/bc/bc11-0.0.2.0.0.md
+++ b/ok/bc/bc11-0.0.2.0.0.md
@@ -1,6 +1,6 @@
 ### 青 皮
 
-**〔原文〕辛苦而温，色青气烈。入肝胆气分。疏肝泻肺**，柴胡疏上焦肝气，青皮平下焦肝气。凡泻气药，皆云泻肺。**破滞削坚，除痰消痞。治肝气郁积，胁痛多怒，久疟结癖**，入肝散邪，入脾除痰，疟家必用之品，故清脾饮以之为君痛乳肿。**疝痛乳肿**。朱丹溪曰：乳房属阳明，乳头属厥阴。乳母或因忿怒郁闷，厚味酿积，致厥阴之气不行，故窍不得出； 阳明之血腾沸，故热甚而化脓。亦因其子有滞痰膈热，含乳而睡，嘘气致生结核者。初起便须忍痛揉软，吮令汁透，自可消散。治法以青皮疏肝滞，石膏清胃热，甘草节行浊血，栝蒌消肿导毒，或加没药、橘叶、金银花、蒲公英、皂角刺、当归，佐以少酒，若干肿处灸三五壮尤捷。久则凹陷名乳癌，不可治矣。**最能发汗**，皮能达皮，辛善发散。**有汗及气虚人禁用**。陈皮升浮，入脾肺治髙，青皮沉降，入肝胆治低。炒之以醋，所谓肝欲散；急食辛以散之，以酸泄之，以苦降之也。**橘之青而未黄者，醋炒用**。古方无用者，宋以后始与陈皮分用。
+**〔原文〕辛苦而温，色青气烈。入肝胆气分。疏肝泻肺**，<small>柴胡疏上焦肝气，青皮平下焦肝气。凡泻气药，皆云泻肺。</small>**破滞削坚，除痰消痞。治肝气郁积，胁痛多怒，久疟结癖**，<small>入肝散邪，入脾除痰，疟家必用之品，故清脾饮以之为君痛乳肿。</small>**疝痛乳肿**。<small>朱丹溪曰：乳房属阳明，乳头属厥阴。乳母或因忿怒郁闷，厚味酿积，致厥阴之气不行，故窍不得出； 阳明之血腾沸，故热甚而化脓。亦因其子有滞痰膈热，含乳而睡，嘘气致生结核者。初起便须忍痛揉软，吮令汁透，自可消散。治法以青皮疏肝滞，石膏清胃热，甘草节行浊血，栝蒌消肿导毒，或加没药、橘叶、金银花、蒲公英、皂角刺、当归，佐以少酒，若干肿处灸三五壮尤捷。久则凹陷名乳癌，不可治矣。</small>**最能发汗**，<small>皮能达皮，辛善发散。</small>**有汗及气虚人禁用**。<small>陈皮升浮，入脾肺治髙，青皮沉降，入肝胆治低。炒之以醋，所谓肝欲散；急食辛以散之，以酸泄之，以苦降之也。</small>**橘之青而未黄者，醋炒用**。<small>古方无用者，宋以后始与陈皮分用。</small>
 
 【讲解】**青皮偏疏肝胆之气，药力较强**。为芸香科常绿小乔木植物橘及其同属多种植物的幼果或未成熟果实的果皮。生用或醋拌炒用。
 
