--- a/ok/bc/bc11-0.0.4.0.0.md
+++ b/ok/bc/bc11-0.0.4.0.0.md
@@ -1,7 +1,7 @@
 ### 香 附
 
-**〔原文〕性平气香，味辛能散，微苦能降，微甘能和，乃血中气药，通行十二经、八脉气分，主一切气**。 人身以气为主，气盛则强，虚则衰，顺也平，逆则病，绝则死矣。经日：怒则气上，恐则气下，喜则气缓，悲则气消，惊则气乱，思则气结，劳则气耗，此七情之气也。以香附为君，随证而加升降消补之药。《素问》中仍有寒则气收，热则气泄。名九气。**利三焦，解六郁**，痰郁、火郁、气郁、血郁、湿郁、食郁。**止诸痛**。通则不痛。**治多怒多忧，痰饮痞满，胸肿腹胀，饮食积聚，霍乱吐泻，肾气脚气，痈疽疮疡，**血凝气滞所致。香附一味末服，名独胜丸，治痈疽由郁怒得者。如疮初作，以此代茶，溃后亦服之。大凡疮疽喜服香药，行气通血，最忌臭秽不洁触之。故古人治疡，多用五香连翘饮。康祖左乳病痈，又臆间生核，痛楚半载，祷张王梦授以方：姜汁制香附为末，每服二钱，
-米饮下，遂愈。**吐血便血，崩中带下，月经不调**，气为血配，血因气行，经成块者，气之凝；将行而痛，气之滞；行后作痛，气血俱虚也；色淡亦虚也；色紫，气之热；色黑则热之甚也；错经者，气之乱；肥人痰多而经阻，气不运也。香附阴中快气之药，气顺则血和畅，然须辅以凉血补气之药。朱丹溪曰：能引血药至气分而生血。此正阳生阴长之义。**胎产百病。能推陈致新，故诸书皆云益气**。行中有补，朱丹溪曰：天行健运不怠，所以生生无穷，即此理耳。李时珍曰：凡人病则气滞而馁，香附为气分君药，臣以参芪，佐以甘草，治虚怯甚速也。**去毛用。生则上行胸膈，外达皮肤；熟则下走肝肾，旁彻腰膝。童便浸炒，则入血分而补虚；盐水浸炒，则入血分而润燥**；或蜜水炒。**青盐炒，则补肾气；酒浸炒，则行经络；醋浸炒，则消积聚**；且敛其散。**姜汁炒，则化痰饮；炒黑又能止血。忌铁**。李时珍曰：得参术则补气，得归、地则补血，得木香则散滞和中，得檀香则理气醒脾，得沉香则升降诸气，得芎䓖、苍术，则总解诸郁，得栀子、黄连则清降火热，得茯神则交济心肾，得茴香、破故纸则引气归元，得厚朴、半夏，则决壅消胀，得紫苏、葱白，则发汗散邪，得三棱、莪术，则消积磨块，得艾叶则治血气、暖子宫。乃气病之总司，女科之仙药也。大抵妇人多郁，气行则郁解，故服之尤效，非宜于妇人，不宜于男子也。李士材曰：乃治标之剂，惟气实血未大虚者宜之，不然恐损气而燥血，愈致其疾矣。世俗泥于女科仙药之一语，惜未有发明及此者。
+**〔原文〕性平气香，味辛能散，微苦能降，微甘能和，乃血中气药，通行十二经、八脉气分，主一切气**。<small> 人身以气为主，气盛则强，虚则衰，顺也平，逆则病，绝则死矣。经日：怒则气上，恐则气下，喜则气缓，悲则气消，惊则气乱，思则气结，劳则气耗，此七情之气也。以香附为君，随证而加升降消补之药。《素问》中仍有寒则气收，热则气泄。名九气。</small>**利三焦，解六郁**，<small>痰郁、火郁、气郁、血郁、湿郁、食郁。</small>**止诸痛**。<small>通则不痛。</small>**治多怒多忧，痰饮痞满，胸肿腹胀，饮食积聚，霍乱吐泻，肾气脚气，痈疽疮疡，**<small>血凝气滞所致。香附一味末服，名独胜丸，治痈疽由郁怒得者。如疮初作，以此代茶，溃后亦服之。大凡疮疽喜服香药，行气通血，最忌臭秽不洁触之。故古人治疡，多用五香连翘饮。康祖左乳病痈，又臆间生核，痛楚半载，祷张王梦授以方：姜汁制香附为末，每服二钱，
+米饮下，遂愈。</small>**吐血便血，崩中带下，月经不调**，<small>气为血配，血因气行，经成块者，气之凝；将行而痛，气之滞；行后作痛，气血俱虚也；色淡亦虚也；色紫，气之热；色黑则热之甚也；错经者，气之乱；肥人痰多而经阻，气不运也。香附阴中快气之药，气顺则血和畅，然须辅以凉血补气之药。朱丹溪曰：能引血药至气分而生血。此正阳生阴长之义。</small>**胎产百病。能推陈致新，故诸书皆云益气**。<small>行中有补，朱丹溪曰：天行健运不怠，所以生生无穷，即此理耳。李时珍曰：凡人病则气滞而馁，香附为气分君药，臣以参芪，佐以甘草，治虚怯甚速也。</small>**去毛用。生则上行胸膈，外达皮肤；熟则下走肝肾，旁彻腰膝。童便浸炒，则入血分而补虚；盐水浸炒，则入血分而润燥**；<small>或蜜水炒。</small>**青盐炒，则补肾气；酒浸炒，则行经络；醋浸炒，则消积聚**；<small>且敛其散。</small>**姜汁炒，则化痰饮；炒黑又能止血。忌铁**。<small>李时珍曰：得参术则补气，得归、地则补血，得木香则散滞和中，得檀香则理气醒脾，得沉香则升降诸气，得芎䓖、苍术，则总解诸郁，得栀子、黄连则清降火热，得茯神则交济心肾，得茴香、破故纸则引气归元，得厚朴、半夏，则决壅消胀，得紫苏、葱白，则发汗散邪，得三棱、莪术，则消积磨块，得艾叶则治血气、暖子宫。乃气病之总司，女科之仙药也。大抵妇人多郁，气行则郁解，故服之尤效，非宜于妇人，不宜于男子也。李士材曰：乃治标之剂，惟气实血未大虚者宜之，不然恐损气而燥血，愈致其疾矣。世俗泥于女科仙药之一语，惜未有发明及此者。</small>
 
 【讲解】**香附为疏肝理气，解郁调经之佳品**。为莎草科多年生草本植物莎草的根茎。茎节上生褐色硬毛，挖出后晒干，烧去毛及细根。生用，或醋炒用。
 
